feat: index 1차 수정안

--- a/essentials/create-auth.mdx
+++ b/essentials/create-auth.mdx
@@ -1,7 +1,6 @@
 ---
-title: 'Code Blocks'
-description: 'Display inline code and code blocks'
-icon: 'code'
+title: "계정 생성"
+description: "Display inline code and code blocks"
 ---
 
 ## Basic
