--- a/essentials/slack.mdx
+++ b/essentials/slack.mdx
@@ -1,7 +1,6 @@
 ---
-title: 'Markdown Syntax'
-description: 'Text, title, and styling in standard markdown'
-icon: 'text-size'
+title: "슬랙 연동하기"
+description: "Text, title, and styling in standard markdown"
 ---
 
 ## Titles
