--- a/essentials/google.mdx
+++ b/essentials/google.mdx
@@ -1,13 +1,9 @@
 ---
-title: 'Images and Embeds'
-description: 'Add image, video, and other HTML elements'
-icon: 'image'
+title: "구글 워크스페이스 연동하기"
+description: "Add image, video, and other HTML elements"
 ---
 
-<img
-  style={{ borderRadius: '0.5rem' }}
-  src="https://mintlify-assets.b-cdn.net/bigbend.jpg"
-/>
+<img style={{ borderRadius: "0.5rem" }} src="https://mintlify-assets.b-cdn.net/bigbend.jpg" />
 
 ## Image
 
@@ -32,14 +28,14 @@ To get more customizability with images, you can also use [embeds](/writing-cont
 ## Embeds and HTML elements
 
 <iframe
-  width="560"
-  height="315"
-  src="https://www.youtube.com/embed/4KzFe50RQkQ"
-  title="YouTube video player"
-  frameborder="0"
-  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-  allowfullscreen
-  style={{ width: '100%', borderRadius: '0.5rem' }}
+    width="560"
+    height="315"
+    src="https://www.youtube.com/embed/4KzFe50RQkQ"
+    title="YouTube video player"
+    frameBorder="0"
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+    allowFullScreen
+    style={{ width: "100%", borderRadius: "0.5rem" }}
 ></iframe>
 
 <br />
