--- a/essentials/setting.mdx
+++ b/essentials/setting.mdx
@@ -1,7 +1,6 @@
 ---
-title: 'Navigation'
-description: 'The navigation field in mint.json defines the pages that go in the navigation menu'
-icon: 'map'
+title: "세부 항목 설정하기"
+description: "노쇼 + a"
 ---
 
 The navigation menu is the list of links on every website.
