마일 시작하기 index 셋팅 및 와야할 내용 작성

--- a/essentials/create-auth.mdx
+++ b/essentials/create-auth.mdx
@@ -1,36 +1,10 @@
 ---
 title: "계정 생성"
-description: "Display inline code and code blocks"
+description: "계정 생성 과정 및 후속 처리에 대해서 알려줍니다."
 ---
 
-## Basic
+## 와야할 내용
 
-### Inline Code
-
-To denote a `word` or `phrase` as code, enclose it in backticks (`).
-
-```
-To denote a `word` or `phrase` as code, enclose it in backticks (`).
-```
-
-### Code Block
-
-Use [fenced code blocks](https://www.markdownguide.org/extended-syntax/#fenced-code-blocks) by enclosing code in three backticks and follow the leading ticks with the programming language of your snippet to get syntax highlighting. Optionally, you can also write the name of your code after the programming language.
-
-```java HelloWorld.java
-class HelloWorld {
-    public static void main(String[] args) {
-        System.out.println("Hello, World!");
-    }
-}
-```
-
-````md
-```java HelloWorld.java
-class HelloWorld {
-    public static void main(String[] args) {
-        System.out.println("Hello, World!");
-    }
-}
-```
-````
+-   로그인 과정 명시
+-   로그인과 동시에 어떤 작업이 이루어지는지 설명
+-   후에 서비스에 따라서 해당 페이지에 가서 설정을 마치세요라고 알려줌
