--- a/essentials/setting/noshow.mdx
+++ b/essentials/setting/noshow.mdx
@@ -1,36 +1,11 @@
 ---
-title: "노쇼 체크 활성화하기"
+title: "노쇼 체크"
 description: "Display inline code and code blocks"
 ---
 
-## Basic
+## 와야 할 내용
 
-### Inline Code
-
-To denote a `word` or `phrase` as code, enclose it in backticks (`).
-
-```
-To denote a `word` or `phrase` as code, enclose it in backticks (`).
-```
-
-### Code Block
-
-Use [fenced code blocks](https://www.markdownguide.org/extended-syntax/#fenced-code-blocks) by enclosing code in three backticks and follow the leading ticks with the programming language of your snippet to get syntax highlighting. Optionally, you can also write the name of your code after the programming language.
-
-```java HelloWorld.java
-class HelloWorld {
-    public static void main(String[] args) {
-        System.out.println("Hello, World!");
-    }
-}
-```
-
-````md
-```java HelloWorld.java
-class HelloWorld {
-    public static void main(String[] args) {
-        System.out.println("Hello, World!");
-    }
-}
-```
-````
+-   노쇼 체크 활성화
+-   노쇼 체크 수정 시 유의할 점
+-   노쇼 활성화시의 회의 시작 부분 설명 페이지로 이동
+-   노쇼 비활성화 시의 회의 시작 부분 설명 페이지로 이동
