--- a/tablet/meeting-extend/book-diff-room.mdx
+++ b/tablet/meeting-extend/book-diff-room.mdx
@@ -1,23 +1,10 @@
 ---
 title: "다른 회의실 예약하기"
-description: "Example overview page before API endpoints"
+description: "다른 회의실 예약하는 방법을 알려줌"
 ---
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas et eros iaculis tortor dapibus cursus. Curabitur quis sapien nec tortor dictum gravida.
+## 와야 할 내용
 
-```bash
-'Authorization': 'Token <team_token>'
-```
-
-## API Tokens
-
-Nullam convallis mauris at nunc consectetur, ac imperdiet leo rutrum. Maecenas cursus purus a pellentesque blandit. Pellentesque vitae lacinia libero, non mollis metus.
-
-Nam id ullamcorper urna, at rutrum enim. [Maecenas vulputate](/introduction) vehicula libero, vitae sodales augue pretium nec. Quisque a magna tempor, semper risus vel, fermentum nunc. Pellentesque fermentum interdum ex, eu convallis massa blandit sed. Aliquam bibendum ipsum vel laoreet auctor.
-
-### Permissions
-
-Etiam lobortis ut odio ut fermentum. Nunc odio velit, sollicitudin at consectetur id, tristique eget turpis. Aliquam at risus vitae dolor sodales venenatis. In hac habitasse platea dictumst.
-
-Aenean consequat diam eget mollis fermentum. [Quisque eu malesuada](/introduction) felis, non dignissim libero.
-s
+-   연장하기의 다른 회의실 예약하는 패스를 알려줌
+-   만약 회의실이 이미 정렬되어있거나 하면, 해당 내용도 넣어줌
+-   구글 캘린더에도 반영된다는 것을 알려줌
