--- a/question.mdx
+++ b/question.mdx
@@ -1,92 +1,29 @@
 ---
 title: "자주 묻는 질문"
-description: "Learn how to preview changes locally"
+description: "FAQ"
 ---
 
-<Info>**Prerequisite** You should have installed Node.js (version 18.10.0 or higher).</Info>
-
-Step 1. Install Mintlify on your OS:
-
-<CodeGroup>
-
-```bash npm
-npm i -g mintlify
-```
-
-```bash yarn
-yarn global add mintlify
-```
-
-</CodeGroup>
-
-Step 2. Go to the docs are located (where you can find `mint.json`) and run the following command:
-
-```bash
-mintlify dev
-```
-
-The documentation website is now available at `http://localhost:3000`.
-
-### Custom Ports
-
-Mintlify uses port 3000 by default. You can use the `--port` flag to customize the port Mintlify runs on. For example, use this command to run in port 3333:
-
-```bash
-mintlify dev --port 3333
-```
-
-You will see an error like this if you try to run Mintlify in a port that's already taken:
-
-```md
-Error: listen EADDRINUSE: address already in use :::3000
-```
-
-## Mintlify Versions
-
-Each CLI is linked to a specific version of Mintlify. Please update the CLI if your local website looks different than production.
-
-<CodeGroup>
-
-```bash npm
-npm i -g mintlify@latest
-```
-
-```bash yarn
-yarn global upgrade mintlify
-```
-
-</CodeGroup>
-
-## Deployment
-
-<Tip>Unlimited editors available under the [Startup Plan](https://mintlify.com/pricing)</Tip>
-
-You should see the following if the deploy successfully went through:
-
-<Frame>
-    <img src="/images/checks-passed.png" style={{ borderRadius: "0.5rem" }} />
-</Frame>
-
-## Troubleshooting
-
-Here's how to solve some common problems when working with the CLI.
-
 <AccordionGroup>
-  <Accordion title="Mintlify is not loading">
-    Update to Node v18. Run `mintlify install` and try again.
-  </Accordion>
-  <Accordion title="No such file or directory on Windows">
-Go to the `C:/Users/Username/.mintlify/` directory and remove the `mint`
-folder. Then Open the Git Bash in this location and run `git clone
-https://github.com/mintlify/mint.git`.
+    <Accordion title="Q. 워크스페이스의 관리자인데 공고를 열람할 수 없어요.">
+        워크스페이스와 공고의 권한은 서로 상이하며, 워크스페이스의 관리자여도 공고에 참석되어야만 열람할 수 있습니다. 
+        
+        단, 워크스페이스의
+        소유자는 공고 참가 요청 없이 직접 모든 공고에 참석할 수 있습니다.
 
-Repeat step 3.
+    </Accordion>
+    <Accordion title="Q. 여러 지원자에게 면접 일정을 한번에 요청할 수 있나요?">
+        워크스페이스와 공고의 권한은 서로 상이하며, 워크스페이스의 관리자여도 공고에 참석되어야만 열람할 수 있습니다.
 
-  </Accordion>
-  <Accordion title="Getting an unknown error">
-    Try navigating to the root of your device and delete the ~/.mintlify folder.
-    Then run `mintlify dev` again.
-  </Accordion>
+        단, 워크스페이스의
+        소유자는 공고 참가 요청 없이 직접 모든 공고에 참석할 수 있습니다.
+
+    </Accordion>
+    <Accordion title="Q. 지원자 데이터는 어떻게 다운로드 하나요?">
+        워크스페이스와 공고의 권한은 서로 상이하며, 워크스페이스의 관리자여도 공고에 참석되어야만 열람할 수 있습니다.
+
+        단, 워크스페이스의
+        소유자는 공고 참가 요청 없이 직접 모든 공고에 참석할 수 있습니다.
+
+    </Accordion>
+
 </AccordionGroup>
-
-Curious about what changed in a CLI version? [Check out the CLI changelog.](/changelog/command-line)
