feat: 1차 인덱스 수정 완료

--- a/tablet/end.mdx
+++ b/tablet/end.mdx
@@ -1,5 +1,5 @@
 ---
-title: "개요"
+title: "회의 종료하기"
 description: "마일 태블릿 페이지의 대략적인 소개를 합니다."
 ---
 
@@ -10,6 +10,6 @@ description: "마일 태블릿 페이지의 대략적인 소개를 합니다."
 -   태블릿 로그인 화면
 -   회의 시작하기 화면
 -   바로 예약 화면
--   다른 회의실 예약 화면
+-   다른 회의실 예약 화면으로
 
 ....
