--- a/introduction.mdx
+++ b/introduction.mdx
@@ -1,39 +1,16 @@
 ---
 title: 마일 가이드
-description: "Welcome to the home of your new documentation"
+description: "마일 가이드에 오신 것을 환영합니다!"
 ---
 
-<img className="block dark:hidden" src="/images/hero-light.svg" alt="Hero Light" />
-<img className="hidden dark:block" src="/images/hero-dark.svg" alt="Hero Dark" />
+<Note>마일 가이드에 오신 것을 환영합니다!</Note>
 
-## Setting up
+-   [제품 소개서](https://mile.mintlify.app/product)
+-   [자주 묻는 질문](https://mile.mintlify.app/question)
+-   [공지사항/업데이트](https://mile.mintlify.app/notice)
 
-The first step to world-class documentation is setting up your editing environnments.
+<br />
 
-<CardGroup cols={2}>
-    <Card title="Edit Your Docs" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
-        Get your docs set up locally for easy development
-    </Card>
-    <Card title="Preview Changes" icon="image" href="https://mintlify.com/docs/development">
-        Preview your changes before you push to make sure they're perfect
-    </Card>
-</CardGroup>
+그 외에 상담 및 문의사항이 있으시면 아래 링크를 통해 언제든 연락해주세요.
 
-## Make it yours
-
-Update your docs to your brand and add valuable content for the best user conversion.
-
-<CardGroup cols={2}>
-    <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
-        Customize your docs to your company's colors and brands
-    </Card>
-    <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
-        Automatically generate endpoints from an OpenAPI spec
-    </Card>
-    <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/components/accordion">
-        Build interactive features and designs to guide your users
-    </Card>
-    <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/showcase">
-        Check out our showcase of our favorite documentation
-    </Card>
-</CardGroup>
+-   [마일팀에게 문의하기](https://mile.channel.io/home)
