--- a/product.mdx
+++ b/product.mdx
@@ -6,8 +6,7 @@ description: "최신화된 제품 소개서를 바로 확인 해보세요."
 <Note>도입 문의가 필요하시다면 jinwoo@mile.im 혹은 [채팅 상담](https://mile.channel.io/home)을 통해 편히 문의해 주시길 바랍니다.</Note>
 <br />
 <iframe
-    src="https://mile-storage.s3.ap-northeast-2.amazonaws.com/mile-introduction.pdf"
-    type="application/pdf"
+    src="https://tally.so/embed/w7KZq9?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
     width="100%"
     height="500"
 ></iframe>
