관리자 가이드-계정 생성하기 업로드

--- a/product.mdx
+++ b/product.mdx
@@ -6,7 +6,7 @@ description: "최신화된 제품 소개서를 바로 확인 해보세요."
 <Note>도입 문의가 필요하시다면 jinwoo@mile.im 혹은 [채팅 상담](https://mile.channel.io/home)을 통해 편히 문의해 주시길 바랍니다.</Note>
 <br />
 <iframe
-    src="https://tally.so/embed/w7KZq9?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
+    src="https://tally.so/embed/3qGP6g?alignLeft=1&hideTitle=1&transparentBackground=1&dynamicHeight=1"
     width="100%"
-    height="500"
+    height="1500"
 ></iframe>
