--- a/essentials/create-auth.mdx
+++ b/essentials/create-auth.mdx
@@ -3,8 +3,36 @@ title: "계정 생성하기"
 description: "계정 생성 과정 및 후속 처리에 대해서 알려줍니다."
 ---
 
-## 와야 할 내용
+<Warning>마일 관리자 사이트 로그인으로, 구글 워크스페이스의 최고권한 사용자만 로그인이 가능합니다.</Warning>
 
--   로그인 과정 명시
--   로그인과 동시에 어떤 작업이 이루어지는지 설명
--   후에 서비스에 따라서 해당 페이지에 가서 설정을 마치세요라고 알려줌
+<br />
+## 1. 구글 계정으로 로그인하기
+
+[마일 로그인하러 가기](https://app.mile.im/login/auth) 링크를 클릭해서, 로그인 화면으로 이동합니다.
+
+이후, 우측 가운데 [Sign in with Google]버튼을 클릭하시어 구글 워크스페이스 계정과 연동하여 로그인할 수 있습니다.
+
+로그인 시 약 10초 정도의 로딩 시간이 걸리며, 최초 로그인 시 워크스페이스 캘린더 정보와 멤버 정보가 연동됩니다.
+
+<img src="../images/essentials/create-auth/img1.png" height="300" width="100%"></img>
+
+<br />
+## 2. 약관 동의하기
+
+최초로 로그인을 시도하셨다면, 개인정보 수집 및 이용 동의를 선택해주어 계정을 생성하실 수 있습니다.
+
+<img src="../images/essentials/create-auth/img2.png" height="300" width="100%"></img>
+
+<br />
+## 3. 추가 설정 이어하기
+
+모든 과정이 끝났다면 아래와 같이 구글 워크스페이스 내의 정보들이 사이트 메인화면에 표시가 됩니다.
+
+해당 관리사 사이트에서 슬랙, 구글 캘린더 연동 및 태블릿 기능 커스텀을 진행해보실 수 있습니다.
+
+<img src="../images/essentials/create-auth/img3.png" height="300" width="100%"></img>
+
+**다음으로 설정해야하는 목록들은 다음과 같습니다.**
+
+-   [구글 캘린더 연동하기]("https://mile.mintlify.app/google")
+-   [슬랙 연동하기]("https://mile.mintlify.app/slack")
