--- a/essentials/create-auth.mdx
+++ b/essentials/create-auth.mdx
@@ -1,9 +1,14 @@
 ---
 title: "계정 생성하기"
-description: "계정 생성 과정 및 후속 처리에 대해서 알려줍니다."
+description: "계정 생성 과정 및 마일의 첫 시작을 알려드립니다!"
 ---
 
 <Warning>마일 관리자 사이트 로그인으로, 구글 워크스페이스의 최고권한 사용자만 로그인이 가능합니다.</Warning>
+
+> 처음 회원가입 하는 계정은 Mile내 회사의 워크스페이스 owner 역할을 수행하게 됩니다.
+>
+> 따라서 최초 로그인할 계정은 반드시 워크스페이스 내 최고 권한 관리자 역할이어야 합니다.
+> 보다 자세한 내용은 마일팀에 [문의(권장)]("https://mile.channel.io/home") 혹은 [구글 워크스페이스 기본 제공 관리자 역할]("https://support.google.com/a/answer/2405986?hl=ko&ref_topic=9832445&sjid=12978668995399414398-AP")를 확인해주세요.
 
 <br />
 ## 1. 구글 계정으로 로그인하기
