--- a/essentials/google.mdx
+++ b/essentials/google.mdx
@@ -1,9 +1,51 @@
 ---
 title: "구글 캘린더 연동하기"
-description: "구글 캘린더 연동을 통해서 회의실 일정을 태블릿에서 받아보세요."
+description: "구글 캘린더 연동을 통해서 회의실 일정을 태블릿에서 받아보세요!"
 ---
 
-## 와야 할 내용
+구글 캘린더로 관리할 회의실을 선택해주시면, 태블릿에서 해당 회의실의 예약 및 회의 시작등 여러가지 기능들을 사용하실 수 있습니다.
 
--   웹에서의 캘린더 편집
--   연동 후 태블릿 연동되는 모습
+[로그인 및 회의실 선택하기]("https://mile.mintlify.app/essentials/tablet-login") 에서 태블릿에서의 회의실 선택 및 자세한 사용법을 확인해주세요.
+
+<br />
+
+## 1. 서비스 연동 탭 이동하기
+
+로그인 후 나오는 메인 페이지에서 좌측 목록 부분에서 `서비스 연동`탭을 클릭하셔서 서비스 연동 페이지로 접속합니다.
+
+> 서비스 연동 탭은 슬랙과 구글 워크스페이스와 같이, 마일 서비스 이용에 필요한 서비스들을 연동하는 페이지입니다.
+
+<br />
+
+<img src="/images/essentials/google/img1.png" width="100%" height="300" />
+
+<br />
+
+## 2. 구글 캘린더 연동하기
+
+서비스 연동 탭에는 현재 3가지의 기능이 있습니다.
+
+-   구글 캘린더 연동
+-   구글 워크스페이스 멤버 업데이트
+-   [슬랙 연동]("https://mile.mintlify.app/essentials/slack)
+
+맨 상단의 `구글 워크스페이스 연동` 탭에서 `편집하기` 버튼을 눌러 태블릿에서 보이는 회의실을 선택하여 연동하실 수 있습니다.
+
+<br />
+
+<img src="/images/essentials/google/img2.png" width="100%" height="300" />
+<br />
+
+`편집하기` 버튼을 누르면, 연동할 캘린더를 선택할 수 있는 모달 창이 뜨게되고, 해당 창에서 연동하고 싶은 캘린더를 선택하여 하단에 있는 `확인` 버튼을 눌러주시면 로딩 후에 연동이 되어 모달창이 사라집니다.
+
+> 최대 5분 정도의 연동시간이 필요할 수 있습니다.
+
+<br />
+<img src="/images/essentials/google/img3.png" width="100%" height="300" />
+
+<br />
+연동 완료 후, `연동된 캘린더` 탭에서 현재 연동된 캘린더 리스트를 확인해보실 수 있습니다.
+<br />
+<img src="/images/essentials/google/img4.png" width="100%" height="300" />
+
+해당 캘린더 설정이 완료가 되셨으면, [로그인 및 회의실 선택하기]("https://mile.mintlify.app/essentials/tablet-login")를 확인해주시고, 태블릿으로 해당 회의실 예약을 진행해보세요!
