--- a/essentials/slack.mdx
+++ b/essentials/slack.mdx
@@ -1,10 +1,47 @@
 ---
 title: "슬랙 연동하기"
-description: "슬랙 연동 방법 및 동기화 방법"
+description: "마일 슬랙 앱을 연동하는 과정을 알려드립니다."
 ---
 
-## 와야 할 내용
+<Tip>슬랙 연동은 슬랙 워크스페이스가 변동되거나, 추가 멤버가 들어왔을 시에 동기화가 필요합니다.</Tip>
 
--   슬랙 연동 과정
--   어떤 상황에 슬랙 동기화를 해야하는지 설명
--   슬랙 연동 후 어떤 기능을 할 수 있는지 해당 post 링킹
+<br />
+
+## 1. 서비스 연동 탭 접속하기
+
+로그인 후 나오는 메인 페이지에서 좌측 목록 부분에서 `서비스 연동`탭을 클릭하셔서 서비스 연동 페이지로 접속합니다.
+
+> 서비스 연동 탭은 슬랙과 구글 워크스페이스와 같이, 마일 서비스 이용에 필요한 서비스들을 연동하는 페이지입니다.
+
+<br />
+<img src="/images/essentials/slack/img1.png" />
+
+<br />
+
+## 2. 슬랙 앱 워크스페이스에 연동하기
+
+서비스 연동 탭에서 가장 하단부에 `슬랙 앱 연동`탭이 있습니다.
+해당 탭에서 최초 연동시에 `설치하기`버튼을, 최초 연동이 아닐때 `동기화 아이콘`을 클릭해주시면 슬랙 연동 페이지로 이동됩니다.
+
+<br />
+
+<img src="/images/essentials/slack/img2.png" />
+
+<br />
+연동하시고자하는 슬랙의 워크스페이스를 우측 상단에서 설정해주시고, 하단 부에 있는 `허용`버튼을 클릭해주시면 슬랙 연동이 완료됩니다.
+<br />
+
+<img src="/images/essentials/slack/img3.png" />
+
+<br />
+해당 과정을 모두 완료하시면, 연동한 슬랙 워크스페이스에서 Mile앱이 뜨는 것을 확인하실 수 있습니다.
+
+<img src="/images/essentials/slack/img4.png" />
+
+<br />
+
+## 3. 슬랙 앱 기능
+
+슬랙앱에서 제공해드리는 기능을 자세히 보시고 싶으시다면, 해당 링크를 확인해보세요!
+
+-   [회의 연장 요청 보내기]('https://mile.mintlify.app/tablet/meeting-extend/request-extend")
