가이드 - 예약 현황 조회하기 업데이트

--- a/tablet/show.mdx
+++ b/tablet/show.mdx
@@ -1,15 +1,26 @@
 ---
 title: "예약 현황 조회하기"
-description: "마일 태블릿 페이지의 대략적인 소개를 합니다."
+description: "태블릿 내에서 회의 예약 현황을 조회하고 예약해보세요."
 ---
 
-## 와야 할 내용
+<br />
+## 1. 현재 회의실 예약 조회하기
 
-사진 및 해당 페이지가 어떤 역할을 하는지 한 줄 씩만 넣는다.
+회의 시작 전 대기 화면에서 해당 회의실의 예약 현황을 조회해보실 수 있습니다.
 
--   태블릿 로그인 화면
--   회의 시작하기 화면
--   바로 예약 화면
--   다른 회의실 예약 화면으로
+예약 현황을 보시고 후속으로 우측 하단부에 `회의실 바로 예약`버튼을 통해 예약을하고 회의를 진행하실 수 있습니다.
 
-....
+<img src="/images/tablet/show/img1.png" width="100%" height="500" />
+
+<br />
+## 2. 다른 회의실 예약 조회하기
+
+우측 상단부에서 예약 현황을 조회하고 싶으신 회의실을 선택해주시면, 해당 회의실의 예약을 우측 화면에서 보실 수 있습니다.
+
+<br />
+
+<img src="/images/tablet/show/img2.png" width="100%" height="500" />
+
+<br />
+회의실 예약 내역을 조회해보시고, 비는 시간에 예약까지 마무리 해보세요! 바로 예약 기능에 대해서 더 자세히 보시려면, [태블릿으로 예약하기](https://mile.mintlify.app/tablet/book/tablet)에서
+확인해보실 수 있습니다
