가이드-태블릿 코드 변경 업로드

--- a/essentials/setting/update-code.mdx
+++ b/essentials/setting/update-code.mdx
@@ -5,11 +5,44 @@ description: "로그인시 필요한 태블릿 코드를 변경하는 방법을 
 
 ## 1. 태블릿 관리 접속하기
 
+로그인 후 나오는 메인 페이지에서 좌측 목록 부분에 `태블릿 관리`탭을 클릭해서 태블릿 관리 페이지로 접속합니다.
+
+<br />
 <img src="/images/essentials/setting/update-code/img1.png" width="100%" height="500" />
+
+태블릿 관리 탭은 회의실 내 설치된 마일 태블릿의 계정을 관리하거나 기능을 커스터마이징 할 수 있는 페이지입니다.
+
+**현재 제공하고 있는 기능은 다음과 같습니다**
+
+-   태블릿 계정 관리
+-   노쇼 기능 커스터마이징
+
+<br />
+
+태블릿 관리 페이지내 `계정` 섹션에서 태블릿 코드 수정을 하실 수 있습니다.
+
+해당 섹션에서 보이는 태블릿 계정으로 태블릿을 로그인하여 마일 기능을 사용하실 수 있습니다. 태블릿 로그인에 대해서 더 자세히 확인하시려면 [로그인 및 회의실 선택하기](https://mile.mintlify.app/essentials/tablet-login)에서 확인해보실 수 있습니다.
+
 <img src="/images/essentials/setting/update-code/img2.png" width="100%" height="500" />
 
+<br />
 ## 2. 태블릿 코드 변경하기
 
+처음 마일 계정을 생성하시면, 태블릿 계정의 비밀번호는 랜덤한 값으로 지정됩니다. 해당 계정을 수정하시려면, 우측 `코드 변경`버튼을 통해서 수정해
+보실 수 있습니다.
+
+<br />
 <img src="/images/essentials/setting/update-code/img3.png" width="100%" height="500" />
+<br />
+태블릿 코드는 4자 이상 20자 이내로 작성이 되어야 변경이 가능합니다.
+
 <img src="/images/essentials/setting/update-code/img4.png" width="100%" height="500" />
+<br />
+
+코드를 입력하신 후에 `코드 변경` 버튼을 눌러 최종적으로 코드를 변경하실 수 있습니다.
+
 <img src="/images/essentials/setting/update-code/img5.png" width="100%" height="500" />
+
+<br />
+변경하신 태블릿 코드로 태블릿에 로그인하여 직접 사용해보고 싶으시다면, [로그인 및 회의실 선택하기](https://mile.mintlify.app/essentials/tablet-login)에서
+더 자세한 과정을 확인해보실 수 있습니다.
