--- a/essentials/tablet-login.mdx
+++ b/essentials/tablet-login.mdx
@@ -3,8 +3,49 @@ title: "[태블릿] 로그인 및 회의실 선택하기"
 description: "로그인 및 회의실 선택"
 ---
 
-## 와야 할 내용
+<br />
+## 1. 태블릿 계정 확인하기
 
--   웹 테블릿 계정 사진
--   로그인
--   회의실 선택
+로그인 후 나오는 메인 페이지에서 좌측 목록 부분에 `태블릿 관리`탭을 클릭해서 태블릿 관리 페이지로 접속합니다.
+
+<br />
+
+<img src="/images/essentials/tablet-login/img1.png" width="100%" height="500" />
+
+태블릿 관리 탭은 회의실 내 설치된 마일 태블릿의 계정을 관리하거나 기능을 커스터마이징 할 수 있는 페이지입니다.
+
+**현재 제공하고 있는 기능은 다음과 같습니다**
+
+-   태블릿 계정 관리
+-   노쇼 기능 커스터마이징
+
+<br />
+
+태블릿 관리 페이지내 `계정`섹션에서 태블릿 계정 및 코드를 확인하실 수 있습니다.
+초기에는 태블릿 코드가 랜덤한 값으로 주어집니다. 만약 태블릿 코드를 수정하고 싶으시다면, [태블릿 코드 변경](https://mile.mintlify.app/essentials/setting/upload-code)에서 더 자세한 내용을 확인하실 수 있습니다.
+
+<img src="/images/essentials/tablet-login/img2.png" width="100%" height="500" />
+<br />
+## 2. 태블릿 로그인하기
+
+태블릿 로그인 화면에 접속하시면, 입력해야하는 아이디, 코드가 있습니다.
+
+해당 영역에 웹에서 확인할 수 있었던 태블릿 계정 및 코드를 입력해주시면 로그인이 가능합니다.
+
+<br />
+<img src="/images/essentials/tablet-login/img3.png" width="100%" height="500" />
+
+<br />
+## 3. 회의실 선택하기
+
+로그인을 하시면 가장 먼저 나오는 화면이 회의실 선택하기 화면입니다.
+
+해당 부분에서 현재 태블릿이 설치되어있는 회의실을 선택해주시고 완료 버튼을 눌러주시면, 해당 회의실 예약 조회 및 대기화면으로 이동하실 수 있습니다.
+
+<Info>하나의 회의실에는 하나의 태블릿이 설정(로그인) 해주셔야 합니다.</Info>
+
+<img src="/images/essentials/tablet-login/img4.png" width="100%" height="500" />
+
+<br />
+**태블릿 시작하기 회의를 시작할 설정은 모두 완료하였습니다.** <br />
+태블릿을 이용하는 가이드는 [마일 태블릿 시작하기](https://mile.mintlify.app/tablet/show)에서 확인해보실 수 있습니다.
