--- a/tablet/book/google.mdx
+++ b/tablet/book/google.mdx
@@ -1,6 +1,6 @@
 ---
 title: "구글 캘린더로 예약하기"
-description: "구글 캘린더로 예약해서 태블릿에 자동으로 회의가 잡혀있는 것을 보여주는 부분"
+description: "구글 캘린더로 예약하고 회의를 시작하는 과정을 알려드립니다."
 ---
 
 ### 와야 할 내용
