--- a/tablet/book/next.mdx
+++ b/tablet/book/next.mdx
@@ -1,10 +1,4 @@
 ---
 title: "후속 회의 예약하기"
-description: "후속 회의 예약 과정을 알려줍니다."
+description: "회의 중에 다음 회의 예약까지 진행하는 과정을 알려드립니다."
 ---
-
-### 와야 할 내용
-
--   회의 중에 다음 회의까지 잡고 싶다면 ~~~
--   회의 진행 중인 태블릿 화면서부터 후속 회의 를 잡는 태블릿 화면까지 보여야함
--   구글 캘린더에 반영되는 모습까지 보여야함
