--- a/tablet/book/tablet.mdx
+++ b/tablet/book/tablet.mdx
@@ -1,10 +1,28 @@
 ---
 title: "태블릿으로 예약하기"
-description: "회의실에서 바로 태블릿으로 예약하는 방법을 알려줘야 함"
+description: "예약된 회의를 조회하고 바로 예약까지의 과정을 알려드립니다."
 ---
 
-### 와야 할 내용
+<br />
+## 1. 회의실 바로 예약하기
 
--   빈 회의실인가요? 들어오셔서 바로 태블릿으로 예약하세요~~
--   예약이 없는 태블릿 화면서부터 태블릿으로 예약하고 바로 시작되는 화면까지 보여야함
--   구글 캘린더에 반영되는 모습까지 보여야함
+회의실 별 예약 현황을 조회하고, 바로 예약이 가능한 회의실과 예약 시간대를 확인하실 수 있습니다.<br/>
+회의실 예약 현황에 대한 내용은 [예약 현황 조회하기](https://mile.mintlify/tablet/show)에서 확인하실 수 있습니다.
+
+빈 시간대에 예약을 원하신다면, 우측 하단부의 `회의실 바로 예약`버튼을 눌러줍니다.
+
+<img src="/images/tablet/book/tablet/img1.png" width="100%" height="500" />
+<br />
+예약하시고자 하는 일자, 예약자, 시간등을 선택해줍니다. <br />
+일자 및 시간을 선택하시면, 우측 예약현황 탭에서 예약하실 시간대를 확인해보실 수 있습니다.
+<img src="/images/tablet/book/tablet/img2.png" width="100%" height="500" />
+
+<br />
+모든 예약 정보를 입력하시면, 우측 하단에 `예약` 버튼이 활성화됩니다. <br />
+해당 버튼을 눌러주시면 최종적으로 예약이 완료됩니다.
+<img src="/images/tablet/book/tablet/img3.png" width="100%" height="500" />
+
+<br />
+
+회의 예약 과정을 해보셨다면, 회의 시작을 해보세요!<br />
+회의 시작에 대한 자세한 내용은 [회의 시작 방법](https://mile.mintlify.app/tablet/setting/noshow)에서 확인해보실 수 있습니다.
