--- a/tablet/meeting-extend/extend.mdx
+++ b/tablet/meeting-extend/extend.mdx
@@ -1,13 +1,28 @@
 ---
 title: "회의 연장하기"
-description: "일반 적인 회의 연장 (뒤에 예약이 없을 때) 과정을 설명"
+description: "태블릿에서 회의 연장하는 방법입니다."
 ---
 
-### 와야 할 내용
+회의가 길어지는 경우, 태블릿에서 회의실 이용 시간을 바로 연장할 수 있습니다. 
 
--   회의 시간이 생각보다 부족할 때 연장하세요~~
--   회의 끝나가는 시점부터 예약 하는 일반적인 패스를 보여줘야 함
--   구글 캘린더에도 해당 내용이 반영된다는 것을 알려줘야 함
--   다만 뒤에 회의 타임이 있을 때 2가지를 추가적으로 할 수 있습니다.
-    -   회의 연장 요청 보내기 링킹
-    -   다른 회의실 예약하기 링킹
+## 1. 회의 이용 시간 연장하기
+
+<br />
+
+<img src="/images/tablet/meeting-extend/img1.png" width="100%" height="300" />
+
+<br />
+
+타이머 안에 위치한 회의 연장하기 버튼을 선택합니다.
+
+<br />
+
+<img src="/images/tablet/meeting-extend/img1.png" width="100%" height="300" />
+
+<br />
+
+연장 가능한 시간을 확인하고, 원하는 연장 시간을 선택합니다.
+
+-   바로 뒷타임 회의가 존재하면 연장이 불가능합니다.
+-   상황에 따라 다음 회의 참석자에게 연장을 요청할 수 있습니다.
+-   연장이 불가능한 경우, 다른 회의실을 이어서 예약할 수 있습니다.
