--- a/tablet/meeting-extend/request-extend.mdx
+++ b/tablet/meeting-extend/request-extend.mdx
@@ -1,15 +1,90 @@
 ---
 title: "회의 연장 요청 보내기"
-description: "회의 연장 요청 보내는 path 보여주기, 마찬가지로 슬랙에서 상대방도 어떻게 보여야하는지 설명되어야 함"
+description: "뒷타임 예약이 이미 잡혀있는 경우, 연장 요청 기능을 통해 회의 이용 시간을 연장할 수 있습니다."
 ---
 
-## 와야 할 내용
+> 관리자 페이지의 "서비스 연동" 탭에서 먼저 슬랙을 연동해야 합니다.<br />
+> 회의가 종료되기 5분 전까지만 연장 요청 버튼이 활성화됩니다.
 
--   뒤 타임에 회의가 잡혀있는 상황 부터 연장요청 보내는 패스가 보여져야함
+<br />
 
-    -   여기서 최대 15분까지만 요청을 보낼 수 있다는 것을 알려줌
+## 1. 회의 이용 시간 연장 요청하기
 
--   연장 요청을 보냈을 때 슬랙메시지가 전송되는 것을 보여줌
-    -   여기서 슬랙 연장 요청 수락시에 뜨는 화면 보여줌
-    -   기존 회의시간 종료 1분전에는 자동 거절로 판단한 다는 것을 보여줌
--   구글 캘린더에도 해당 내용이 반영된다는 것을 알려줘야 함
+회의를 연장하고 싶은데 뒷타임 회의가 존재하는 경우, 뒷타임 회의 참석자에게 연장 요청을 보낼 수 있습니다. <br />
+최대 15분까지 연장 요청이 가능하며, 연장 요청을 받은 상대방이 수락한 경우에만 회의 이용 시간이 연장됩니다. <br />
+
+<br />
+
+<img src="/images/tablet/meeting-extend/img1.png" width="100%" height="300" />
+
+<br />
+
+타이머 안에 위치한 회의 연장하기 버튼을 선택합니다.
+
+<br />
+
+<img src="/images/tablet/meeting-extend/img2.png" width="100%" height="300" />
+
+<br />
+
+바로 연장 가능한 시간은 활성화되며, 뒷타임 예약 시간과 겹치는 시간은 예약 불가로 표시됩니다. <br />
+연장 가능한 시간보다 더 시간이 필요한 경우, 연장 요청 버튼을 선택합니다. <br /
+단, 회의 종료까지 5분도 남지 않은 경우, 버튼이 활성화되지 않습니다.
+
+<br />
+
+<img src="/images/tablet/meeting-extend/img2.png" width="100%" height="300" />
+
+<br />
+
+뒷타임 회의의 참석자 목록이 조회되며, 연장 양해를 구할 참석자를 선택합니다. <br />
+
+<br />
+
+<img src="/images/tablet/meeting-extend/img2.png" width="100%" height="300" />
+
+<br />
+
+연장 및 요청 버튼을 선택합니다. <br />
+우선 연장 가능한 시간이 있다면 해당 시간만큼 우선 연장되며, 선택한 뒷타임 참석자에게 연장 요청 슬랙 메시지가 전송됩니다.
+
+<br />
+
+## 2. 회의 연장 요청이 수락된 경우
+
+<br />
+
+<img src="/images/tablet/meeting-extend/img2.png" width="100%" height="300" />
+
+<br />
+회의 연장 요청이 수락된 경우 태블릿에 연장 요청 수락 알림창이 띄워지며, 회의실 이용 시간이 연장됩니다.
+
+<br />
+
+<img src="/images/tablet/meeting-extend/img2.png" width="100%" height="300" />
+
+<br />
+
+<br />
+
+<img src="/images/tablet/meeting-extend/img2.png" width="100%" height="300" />
+
+<br />
+구글 캘린더에도 변경된 예약 시간이 반영됩니다.
+
+## 3. 회의 연장 요청이 거절된 경우
+
+<br />
+
+<img src="/images/tablet/meeting-extend/img2.png" width="100%" height="300" />
+
+<br />
+회의 연장 요청을 거절된 경우 태블릿에 연장 요청 거절 알림창이 띄워지며, 회의실 이용 시간이 연장되지 않습니다. <br />
+
+- 회의 종료 시간 1분 전까지 미응답인 경우에도 거절로 처리됩니다.
+
+<br />
+
+<img src="/images/tablet/meeting-extend/img2.png" width="100%" height="300" />
+
+<br />
