--- a/tablet/meeting-extend/extend.mdx
+++ b/tablet/meeting-extend/extend.mdx
@@ -1,11 +1,11 @@
 ---
 title: "회의 연장하기"
-description: "태블릿에서 회의 연장하는 방법입니다."
+description: "태블릿에서 회의실 예약 시간을 연장하는 방법입니다."
 ---
 
-회의가 길어지는 경우, 태블릿에서 회의실 이용 시간을 바로 연장할 수 있습니다. 
+예상보다 회의가 길어지는 경우, 마일 태블릿에서 회의실 예약 시간을 바로 연장할 수 있습니다. 
 
-## 1. 회의 이용 시간 연장하기
+## 1. 회의실 예약 시간 연장하기
 
 <br />
 
@@ -17,12 +17,12 @@ description: "태블릿에서 회의 연장하는 방법입니다."
 
 <br />
 
-<img src="/images/tablet/meeting-extend/img1.png" width="100%" height="300" />
+<img src="/images/tablet/meeting-extend/img2.png" width="100%" height="300" />
 
 <br />
 
-연장 가능한 시간을 확인하고, 원하는 연장 시간을 선택합니다.
+연장하고 싶은 시간을 선택한 뒤, 연장 버튼을 선택합니다.
 
--   바로 뒷타임 회의가 존재하면 연장이 불가능합니다.
--   상황에 따라 다음 회의 참석자에게 연장을 요청할 수 있습니다.
--   연장이 불가능한 경우, 다른 회의실을 이어서 예약할 수 있습니다.
+<Info>
+    바로 뒷타임 회의가 존재하는 경우 연장이 불가능합니다. 연장이 불가능한 경우에는 [회의 연장 요청 보내기](https://mile.mintlify.app/tablet/meeting-extend/request-extend) or [다른 회의실 이어서 예약하기](https://mile.mintlify.app/tablet/book/next) 기능을 이용해보세요.
+</Info>
