회의 종료하기 업로드

--- a/tablet/end.mdx
+++ b/tablet/end.mdx
@@ -1,15 +1,27 @@
 ---
 title: "회의 종료하기"
-description: "마일 태블릿 페이지의 대략적인 소개를 합니다."
+description: "태블릿에서 회의를 종료하는 방법을 알려드립니다."
 ---
 
-## 와야 할 내용
+<Note>보다 많은 사람들이 회의실을 사용할 수 있도록, 회의가 일찍 끝나면 종료버튼을 눌러주세요!</Note>
 
-사진 및 해당 페이지가 어떤 역할을 하는지 한 줄 씩만 넣는다.
+<br />
+회의 중에는 타이머 유무에 따라 2가지 화면이 나타납니다. <br />
+태블릿 내 우측 상단에 있는 `타이머 보기` 슬라이더로 화면 전환을 진행하실 수 있습니다.
 
--   태블릿 로그인 화면
--   회의 시작하기 화면
--   바로 예약 화면
--   다른 회의실 예약 화면으로
+타이머 보기가 꺼져있는 화면과 켜져있는 화면 2가지 모두 우측 하단 부분에 `회의 종료`버튼이 있습니다.
 
-....
+<br />
+<p style={{ fontSize: "18px", fontWeight: "700" }}>타이머 보기가 꺼져있는 화면</p>
+
+<img src="/images/tablet/end/img1.png" width="100%" height="500" />
+
+<br />
+<p style={{ fontSize: "18px", fontWeight: "700" }}>타이머 보기가 켜져있는 화면</p>
+<img src="/images/tablet/end/img2.png" width="100%" height="500" />
+
+<br />
+`회의 종료` 버튼을 누르시면, 회의 종료 확인 모달창이 뜨고, <br />
+해당 모달에서 `종료` 버튼을 눌러주시면 최종적으로 회의가 종료되고 대기화면으로 태블릿 화면이 전환됩니다.
+
+<img src="/images/tablet/end/img3.png" width="100%" height="500" />
