--- a/tablet/meeting-extend/book-diff-room.mdx
+++ b/tablet/meeting-extend/book-diff-room.mdx
@@ -3,8 +3,37 @@ title: "다른 회의실 예약하기"
 description: "다른 회의실 예약하는 방법을 알려줌"
 ---
 
-## 와야 할 내용
+## 1. 다른 회의실 이어서 예약하기
 
--   연장하기의 다른 회의실 예약하는 패스를 알려줌
--   만약 회의실이 이미 정렬되어있거나 하면, 해당 내용도 넣어줌
--   구글 캘린더에도 반영된다는 것을 알려줌
+<img src="/images/tablet/meeting-extend/book-diff-room/img1.png" width="100%" height="300" />
+
+타이머 안에 위치한 `연장하기` 버튼을 선택합니다.
+
+<br />
+
+<img src="/images/tablet/meeting-extend/book-diff-room/img2.png" width="100%" height="300" />
+
+연장이 불가능해 다른 회의실을 바로 이어서 예약하고 싶은 경우, `다른 회의실 예약` 버튼을 선택합니다.
+
+<br />
+
+<img src="/images/tablet/meeting-extend/book-diff-room/img3.png" width="100%" height="300" />
+
+참석자는 현재 회의의 참석자가 그대로 유지되며 `x` 버튼을 눌러 제거하거나 `+` 버튼을 눌러 <u>참석자를 수정할 수 있습니다.</u><br />
+시작 시간은 현재 회의가 종료된 후 바로 이어서 사용할 있도록 자동으로 세팅됩니다.
+
+<br />
+
+<img src="/images/tablet/meeting-extend/book-diff-room/img4.png" width="100%" height="300" />
+
+회의실 목록은 <u>바로 이어서 사용 가능한 회의실 목록만 조회됩니다.</u> 조회된 회의실 중에서 이어서 사용할 회의실을 선택합니다.
+
+<br />
+
+<img src="/images/tablet/meeting-extend/book-diff-room/img5.png" width="100%" height="300" />
+
+회의 종료 시간을 설정한 후, 예약 버튼을 눌러 회의실을 예약합니다.
+
+<Info>
+    이어서 예약된 회의실 예약 정보는 구글 캘린더 일정에도 바로 반영됩니다.
+</Info>
