--- a/tablet/meeting-extend/book-diff-room.mdx
+++ b/tablet/meeting-extend/book-diff-room.mdx
@@ -1,6 +1,6 @@
 ---
-title: "다른 회의실 예약하기"
-description: "다른 회의실 예약하는 방법을 알려줌"
+title: "다른 회의실 이어서 예약하기"
+description: "현재 회의실에서 연장이 불가능한 경우, 바로 이어서 다른 회의실을 예약하는 방법입니다"
 ---
 
 ## 1. 다른 회의실 이어서 예약하기
