--- a/tablet/meeting-extend/book-diff-room.mdx
+++ b/tablet/meeting-extend/book-diff-room.mdx
@@ -3,7 +3,7 @@ title: "다른 회의실 이어서 예약하기"
 description: "현재 회의실에서 연장이 불가능한 경우, 바로 이어서 다른 회의실을 예약하는 방법입니다"
 ---
 
-## 1. 다른 회의실 이어서 예약하기
+### 1. 다른 회의실 이어서 예약하기
 
 <img src="/images/tablet/meeting-extend/book-diff-room/img1.png" width="100%" height="300" />
 
