--- a/tablet/setting/noshow.mdx
+++ b/tablet/setting/noshow.mdx
@@ -1,12 +1,58 @@
 ---
 title: "노쇼옵션에 따른 회의 시작 방법"
-description: "Example overview page before API endpoints"
+description: "회의 시작하는 방법을 노쇼 설정에 따라 알려드립니다."
 ---
 
-<Card title="해당 내용은 노쇼 체크기능을 활성화 했을 때 생기는 과정입니다." icon="lightbulb" iconType="duotone" color="red" />
+<Note>
+    노쇼 기능을 사용하신다면, [노쇼 기능 활성화](https://mile.mintlify.app/tablet/setting/noshow#1)를 확인해주세요 <br />
+    노쇼 기능을 사용하지 않으시다면, [노쇼 기능 비활성화](https://mile.mintlify.app/tablet/setting/noshow#2)를 확인해주세요
+</Note>
 
-### 와야 할 내용
+## 1. 노쇼 기능 활성화
 
--   회의 시작 화면
--   10 분 전에 회의시작 버튼을 눌러야 다음 화면으로 넘어가는것을 보여줘야함
--   10 분전에 회의시작 버튼을 누르지 않으면 회의 취소가되는 것을 구글 캘린더 및 태블릿에서도 반영이 되는 것을 확인 할 수 있어야 함
+노쇼 기능이 활성화 된 회의실은 노쇼 처리 시간까지 대기화면이 띄워집니다.<br/>
+회의실의 설정된 노쇼 처리 시간에 따라 노쇼 처리가 진행되고, 노쇼 처리 시간 내에 하단에 있는 `회의 시작하기`버튼을 누르셔야 본 회의를 진행하실 수 있습니다.
+
+만약 시간 내에 누르지 않으면, 노쇼 처리가 되어 자동 회의 종료가 이루어지니, 반드시 진행해주셔야 합니다.
+
+<img src="/images/tablet/setting/noshow/img1.png" width="100%" />
+<br />
+회의 시작을 누르시면 회의 진행 중 여러 기능을 사용해보실 수 있는 `on-air` 화면이 띄워집니다. <br /> `on-air`화면에 대해 더 알고싶으시다면,
+[on-air 화면 자세히 보기](https://mile.mintlify.app/tablet/setting/noshow#3)을 확인해주세요.
+
+<img src="/images/tablet/setting/noshow/img2.png" width="100%" />
+
+<br />
+## 2. 노쇼 기능 비활성화
+
+노쇼 기능이 비활성화 된 회의실은 회의 시간이 되지 않았을 때 다음 타임의 회의실 예약 내역을 알려주는 대기화면이 띄워집니다. <br/>
+해당 대기화면의 자세한 내용은 [예약 현황 조회하기](https://mile.mintlify.app/tablet/show)에서 확인하실 수 있습니다.
+
+<img src="/images/tablet/setting/noshow/img3.png" width="100%" />
+
+<br />
+회의 시간이 지나면 자동은로 회의를 진행 중임을 나타내는 `on-air` 화면으로 전환됩니다.
+
+<br />
+## 3. on-air 화면 자세히 보기
+
+on-air화면은 회의가 시작될 때 전환되는 화면이며, 회의가 진행중임을 나타냅니다. <br />
+해당 화면에서 `다음 회의 예약하기`, `연장하기`, `예약 현황 조회하기`, `회의 종료하기` 등의 기능을 수행하실 수 있습니다.
+
+타이머 보기 옵션에 따라 on-air는 2가지 종류의 화면으로 전환될 수 있습니다.
+
+<br />
+### 3-1. 타이머 켜기
+
+<img src="/images/tablet/setting/noshow/img4.png" width="100%" />
+
+-   **예약 현황**: 예약 현황을 조회해볼 수 있는 버튼입니다.
+-   **바로 예약**: 회의 중에 다음 회의를 바로 예약할 수 있습니다. [더 자세히 보기](https://mile.mintlify.app/tablet/book/next)
+-   **연장하기**: 회의시간이 부족할 때, 회의실 예약 시간을 연장할 수 있습니다. [더 자세기 보기](https://mile.mintlify.app/tablet/meeting-extend/extend)
+-   **타이머 보기**: 회의실 참여자의 선호도에 따라 타이머 보기를 설정하여 태블릿 화면을 전환시킬 수 있습니다.
+-   **회의 종료**: 회의가 종료되었을 시에 누르는 버튼입니다. [더 자세히 보기](https://mile.mintlify.app/tablet/end)
+
+<br />
+### 3-2. 타이머 끄기
+
+<img src="/images/tablet/setting/noshow/img5.png" width="100%" />
