--- a/essentials/google.mdx
+++ b/essentials/google.mdx
@@ -17,7 +17,9 @@ description: "구글 캘린더 연동을 통해서 회의실 일정을 태블릿
 
 <br />
 
-<img src="/images/essentials/google/img1.png" width="100%" height="300" />
+<Frame>
+  <img src="/images/essentials/google/img1.png" width="100%" height="300" />
+</Frame>
 
 <br />
 
@@ -33,7 +35,9 @@ description: "구글 캘린더 연동을 통해서 회의실 일정을 태블릿
 
 <br />
 
-<img src="/images/essentials/google/img2.png" width="100%" height="300" />
+<Frame>
+  <img src="/images/essentials/google/img2.png" width="100%" height="300" />
+</Frame>
 <br />
 
 `편집하기` 버튼을 누르면, 연동할 캘린더를 선택할 수 있는 모달 창이 뜨게되고, 해당 창에서 연동하고 싶은 캘린더를 선택하여 하단에 있는 `확인` 버튼을 눌러주시면 로딩 후에 연동이 되어 모달창이 사라집니다.
@@ -41,11 +45,15 @@ description: "구글 캘린더 연동을 통해서 회의실 일정을 태블릿
 > 최대 5분 정도의 연동시간이 필요할 수 있습니다.
 
 <br />
-<img src="/images/essentials/google/img3.png" width="100%" height="300" />
+<Frame>
+  <img src="/images/essentials/google/img3.png" width="100%" height="300" />
+</Frame>
 
 <br />
 연동 완료 후, `연동된 캘린더` 탭에서 현재 연동된 캘린더 리스트를 확인해보실 수 있습니다.
 <br />
-<img src="/images/essentials/google/img4.png" width="100%" height="300" />
+<Frame>
+  <img src="/images/essentials/google/img4.png" width="100%" height="300" />
+</Frame>
 
 해당 캘린더 설정이 완료가 되셨으면, [로그인 및 회의실 선택하기]("https://mile.mintlify.app/essentials/tablet-login")를 확인해주시고, 태블릿으로 해당 회의실 예약을 진행해보세요!
