--- a/essentials/slack.mdx
+++ b/essentials/slack.mdx
@@ -14,7 +14,9 @@ description: "마일 슬랙 앱을 연동하는 과정을 알려드립니다."
 > 서비스 연동 탭은 슬랙과 구글 워크스페이스와 같이, 마일 서비스 이용에 필요한 서비스들을 연동하는 페이지입니다.
 
 <br />
-<img src="/images/essentials/slack/img1.png" />
+<Frame>
+  <img src="/images/essentials/slack/img1.png" />
+</Frame>
 
 <br />
 
@@ -25,7 +27,9 @@ description: "마일 슬랙 앱을 연동하는 과정을 알려드립니다."
 
 <br />
 
-<img src="/images/essentials/slack/img2.png" />
+<Frame>
+  <img src="/images/essentials/slack/img2.png" />
+</Frame>
 
 <br />
 연동하시고자하는 슬랙의 워크스페이스를 우측 상단에서 설정해주시고, 하단 부에 있는 `허용`버튼을 클릭해주시면 슬랙 연동이 완료됩니다.
@@ -36,7 +40,9 @@ description: "마일 슬랙 앱을 연동하는 과정을 알려드립니다."
 <br />
 해당 과정을 모두 완료하시면, 연동한 슬랙 워크스페이스에서 Mile앱이 뜨는 것을 확인하실 수 있습니다.
 
-<img src="/images/essentials/slack/img4.png" />
+<Frame>
+  <img src="/images/essentials/slack/img4.png" />
+</Frame>
 
 <br />
 
