--- a/tablet/setting/noshow.mdx
+++ b/tablet/setting/noshow.mdx
@@ -15,12 +15,16 @@ description: "회의 시작하는 방법을 노쇼 설정에 따라 알려드립
 
 만약 시간 내에 누르지 않으면, 노쇼 처리가 되어 자동 회의 종료가 이루어지니, 반드시 진행해주셔야 합니다.
 
-<img src="/images/tablet/setting/noshow/img1.png" width="100%" />
+<Frame>
+    <img src="/images/tablet/setting/noshow/img1.png" width="100%" />
+</Frame>
 <br />
 회의 시작을 누르시면 회의 진행 중 여러 기능을 사용해보실 수 있는 `on-air` 화면이 띄워집니다. <br /> `on-air`화면에 대해 더 알고싶으시다면,
 [on-air 화면 자세히 보기](https://mile.mintlify.app/tablet/setting/noshow#3)을 확인해주세요.
 
-<img src="/images/tablet/setting/noshow/img2.png" width="100%" />
+<Frame>
+    <img src="/images/tablet/setting/noshow/img2.png" width="100%" />
+</Frame>
 
 <br />
 ## 2. 노쇼 기능 비활성화
@@ -28,7 +32,9 @@ description: "회의 시작하는 방법을 노쇼 설정에 따라 알려드립
 노쇼 기능이 비활성화 된 회의실은 회의 시간이 되지 않았을 때 다음 타임의 회의실 예약 내역을 알려주는 대기화면이 띄워집니다. <br/>
 해당 대기화면의 자세한 내용은 [예약 현황 조회하기](https://mile.mintlify.app/tablet/show)에서 확인하실 수 있습니다.
 
+<Frame>
 <img src="/images/tablet/setting/noshow/img3.png" width="100%" />
+</Frame>
 
 <br />
 회의 시간이 지나면 자동은로 회의를 진행 중임을 나타내는 `on-air` 화면으로 전환됩니다.
@@ -44,7 +50,9 @@ on-air화면은 회의가 시작될 때 전환되는 화면이며, 회의가 진
 <br />
 ### 3-1. 타이머 켜기
 
-<img src="/images/tablet/setting/noshow/img4.png" width="100%" />
+<Frame>
+    <img src="/images/tablet/setting/noshow/img4.png" width="100%" />
+</Frame>
 
 -   **예약 현황**: 예약 현황을 조회해볼 수 있는 버튼입니다.
 -   **바로 예약**: 회의 중에 다음 회의를 바로 예약할 수 있습니다. [더 자세히 보기](https://mile.mintlify.app/tablet/book/next)
@@ -55,4 +63,6 @@ on-air화면은 회의가 시작될 때 전환되는 화면이며, 회의가 진
 <br />
 ### 3-2. 타이머 끄기
 
-<img src="/images/tablet/setting/noshow/img5.png" width="100%" />
+<Frame>
+    <img src="/images/tablet/setting/noshow/img5.png" width="100%" />
+</Frame>
