--- a/question.mdx
+++ b/question.mdx
@@ -4,26 +4,28 @@ description: "FAQ"
 ---
 
 <AccordionGroup>
-    <Accordion title="Q. 워크스페이스의 관리자인데 공고를 열람할 수 없어요.">
-        워크스페이스와 공고의 권한은 서로 상이하며, 워크스페이스의 관리자여도 공고에 참석되어야만 열람할 수 있습니다. 
-        
-        단, 워크스페이스의
-        소유자는 공고 참가 요청 없이 직접 모든 공고에 참석할 수 있습니다.
-
+    <Accordion title="Q. 추가 기능 요청, 커스터마이징 등의 요구사항도 반영해주실 수 있나요?">
+        Mile 팀은 Better Workplace Enviorment & Employee Experience라는 비전 아래, 고객분들의 요청사항과 피드백을 우선으로 반영하고자 노력합니다. 고객분들의 만족도를 최우선으로 여기고, 빠른 기능 업데이트와 지속적인 요구사항 반영을 위해 노력하겠습니다.
     </Accordion>
-    <Accordion title="Q. 여러 지원자에게 면접 일정을 한번에 요청할 수 있나요?">
-        워크스페이스와 공고의 권한은 서로 상이하며, 워크스페이스의 관리자여도 공고에 참석되어야만 열람할 수 있습니다.
-
-        단, 워크스페이스의
-        소유자는 공고 참가 요청 없이 직접 모든 공고에 참석할 수 있습니다.
-
+    <Accordion title="Q. 도입 이후의 온보딩은 어떻게 진행되나요?">
+        서비스를 도입하실 경우, Mile 팀이 직접 본사에 방문하여, 기기 설치 및 사용법 안내, 초기 온보딩 세션을 무료로 지원합니다.
     </Accordion>
-    <Accordion title="Q. 지원자 데이터는 어떻게 다운로드 하나요?">
-        워크스페이스와 공고의 권한은 서로 상이하며, 워크스페이스의 관리자여도 공고에 참석되어야만 열람할 수 있습니다.
-
-        단, 워크스페이스의
-        소유자는 공고 참가 요청 없이 직접 모든 공고에 참석할 수 있습니다.
-
+    <Accordion title="Q. 일부 회의실에만 테스트 도입이 가능할까요?">
+        마일 서비스는 현재 구글 워크스페이스와 100% 연동되어 일부 회의실에만 적용해보셔도 원활한 공간 활용과 운용을 경험해보실 수 있습니다. 
+        하지만, 모든 공간에 마일 태블릿 서비스가 적용되었을 때 그 효과를 100% 경험하실 수 있으니, 모든 공간에 도입을 권장드립니다 🙂
+    </Accordion>
+    <Accordion title="Q. 기기가 고장났어요. 어떻게 조치해야하나요?">
+        support@mile.im 혹은 마일 서비스 내 외부의 채널톡을 통해 문의주세요! 24시간 내로 마일 팀이 직접 답변 및 조치를 취해드리겠습니다.
+    </Accordion>
+    <Accordion title="Q. 신규입사자가 마일 서비스 내에 반영이 안되요. Or 지난달 퇴사자가 여전히 남아 있어요.">
+        마일 서비스는 구글 워크스페이스와의 연동을 전제로 하여, 신규입/퇴사자의 경우 구글 워크스페이스의 멤버 업데이트 내용을 마일 서비스와 동기화해주셔야 합니다. 
+        마일 웹페이지에서 설정 탭 → 서비스 연동 → 멤버 관리 → 멤버 동기화의 순서로 동기화를 진행해주세요. 구체적인 과정은 _(링크)_에서 확인하실 수 있습니다.
+    </Accordion>
+    <Accordion title="Q. 태블릿 PC에서 연장 요청 시, 대상자에게 슬랙 메세지가 전송 되지 않아요.">
+        마일 서비스는 슬랙과 구글 워크스페이스 이메일이 동일한 계정을 공유함을 전제로 합니다. 해당 현상은 구글 워크스페이스상의 유저 아이디 정보와 슬랙 계정이 동일하지 않아 발생하는 오류로, 해결을 위해 마일팀에게 문의 바랍니다 :)
+    </Accordion>
+    <Accordion title="Q. 구글 워크스페이스 내에 리소스를 새로 추가했는데 마일 서비스에 반영이 안돼요. Or 마일 서비스와 연동 과정에서 오류가 계속 발생해요.">
+        구글 워크스페이스 내에 신규 추가된 리소스의 경우 구글의 정책상 최대 24시간까지 소요됩니다. 또한 Clockwise 등 구글 워크스페이스의 캘린더 api에 직접적으로 접근하여 일정을 수정 및 변경하는 서비스들과 중첩이 발생 시, 연동 과정에서 오류가 발생할 수 있습니다. 해당 오류가 발생 시, 마일 팀에 문의주시면 최대한 빠른 시일 내에 조치를 취하겠습니다.
     </Accordion>
 
 </AccordionGroup>
