fix: 새장 -> 현재창에서 바로 이동하도록 수정

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -7,9 +7,9 @@ description: "마일 가이드에 오신 것을 환영합니다!"
 
 <Note>마일 가이드에 오신 것을 환영합니다!</Note>
 
--   [제품 소개서](https://mile.mintlify.app/product)
--   [자주 묻는 질문](https://mile.mintlify.app/question)
--   [공지사항/업데이트](https://mile.mintlify.app/notice)
+-   <a href="https://mile.mintlify.app/product">제품 소개서</a>
+-   <a href="https://mile.mintlify.app/question">자주 묻는 질문</a>
+-   <a href="https://mile.mintlify.app/notice">공지사항 / 업데이트</a>
 
 <br />
 
