fix: 링크 연결 및 현재창에서 이동

--- a/essentials/setting/update-code.mdx
+++ b/essentials/setting/update-code.mdx
@@ -22,7 +22,7 @@ description: "로그인시 필요한 태블릿 코드를 변경하는 방법을 
 
 태블릿 관리 페이지내 `계정` 섹션에서 태블릿 코드 수정을 하실 수 있습니다.
 
-해당 섹션에서 보이는 태블릿 계정으로 태블릿을 로그인하여 마일 기능을 사용하실 수 있습니다. 태블릿 로그인에 대해서 더 자세히 확인하시려면 [로그인 및 회의실 선택하기](https://mile.mintlify.app/essentials/tablet-login)에서 확인해보실 수 있습니다.
+해당 섹션에서 보이는 태블릿 계정으로 태블릿을 로그인하여 마일 기능을 사용하실 수 있습니다. 태블릿 로그인에 대해서 더 자세히 확인하시려면 <a href="https://mile.mintlify.app/essentials/tablet-login">로그인 및 회의실 선택하기</a>에서 확인해보실 수 있습니다.
 
 <img src="/images/essentials/setting/update-code/img2.png" width="100%" height="500" />
 
@@ -45,5 +45,5 @@ description: "로그인시 필요한 태블릿 코드를 변경하는 방법을 
 <img src="/images/essentials/setting/update-code/img5.png" width="100%" height="500" />
 
 <br />
-변경하신 태블릿 코드로 태블릿에 로그인하여 직접 사용해보고 싶으시다면, [로그인 및 회의실 선택하기](https://mile.mintlify.app/essentials/tablet-login)에서
+변경하신 태블릿 코드로 태블릿에 로그인하여 직접 사용해보고 싶으시다면, <a href="https://mile.mintlify.app/essentials/tablet-login">로그인 및 회의실 선택하기</a>에서
 더 자세한 과정을 확인해보실 수 있습니다.
