--- a/essentials/google.mdx
+++ b/essentials/google.mdx
@@ -7,7 +7,7 @@ description: "구글 캘린더 연동을 통해서 회의실 일정을 태블릿
 
 구글 캘린더로 관리할 회의실을 선택해주시면, 태블릿에서 해당 회의실의 예약 및 회의 시작등 여러가지 기능들을 사용하실 수 있습니다.
 
-[로그인 및 회의실 선택하기]("https://mile.mintlify.app/essentials/tablet-login") 에서 태블릿에서의 회의실 선택 및 자세한 사용법을 확인해주세요.
+<a href="https://mile.mintlify.app/essentials/tablet-login">로그인 및 회의실 선택하기</a>에서 태블릿에서의 회의실 선택 및 자세한 사용법을 확인해주세요.
 
 ---
 
@@ -58,4 +58,4 @@ description: "구글 캘린더 연동을 통해서 회의실 일정을 태블릿
   <img src="/images/essentials/google/img4.png" width="100%" height="300" />
 </Frame>
 
-해당 캘린더 설정이 완료가 되셨으면, [로그인 및 회의실 선택하기]("https://mile.mintlify.app/essentials/tablet-login")를 확인해주시고, 태블릿으로 해당 회의실 예약을 진행해보세요!
+해당 캘린더 설정이 완료가 되셨으면, <a href="https://mile.mintlify.app/essentials/tablet-login">로그인 및 회의실 선택하기</a>를 확인해주시고, 태블릿으로 회의실 예약을 진행해보세요!
