--- a/essentials/slack.mdx
+++ b/essentials/slack.mdx
@@ -50,4 +50,4 @@ description: "마일 슬랙 앱을 연동하는 과정을 알려드립니다."
 
 슬랙앱에서 제공해드리는 기능을 자세히 보시고 싶으시다면, 해당 링크를 확인해보세요!
 
--   [회의 연장 요청 보내기](https://mile.mintlify.app/tablet/meeting-extend/request-extend)
+-   <a href="https://mile.mintlify.app/tablet/meeting-extend/request-extend">회의 연장 요청 보내기</a>
