--- a/tablet/show.mdx
+++ b/tablet/show.mdx
@@ -24,5 +24,4 @@ description: "태블릿 내에서 회의 예약 현황을 조회하고 예약해
   <img src="/images/tablet/show/img2.png" width="100%" height="500" />
 </Frame>
 
-회의실 예약 내역을 조회해보시고, 비는 시간에 예약까지 마무리 해보세요! 바로 예약 기능에 대해서 더 자세히 보시려면, [태블릿으로 예약하기](https://mile.mintlify.app/tablet/book/tablet)에서
-확인해보실 수 있습니다
+회의실 예약 내역을 조회해보시고, 비는 시간에 예약까지 마무리 해보세요! 바로 예약 기능에 대해서 더 자세히 보시려면, <a href="https://mile.mintlify.app/tablet/book/tablet">태블릿으로 예약하기</a>에서 확인해보실 수 있습니다.
