--- a/tablet/book/tablet.mdx
+++ b/tablet/book/tablet.mdx
@@ -8,7 +8,7 @@ description: "예약된 회의를 조회하고 바로 예약까지의 과정을 
 ## 1. 회의실 바로 예약하기
 
 회의실 별 예약 현황을 조회하고, 바로 예약이 가능한 회의실과 예약 시간대를 확인하실 수 있습니다.<br/>
-회의실 예약 현황에 대한 내용은 <a href="https://mile.mintlify/tablet/show">예약 현황 조회하기</a>에서 확인하실 수 있습니다.
+회의실 예약 현황에 대한 내용은 <a href="https://mile.mintlify.app/tablet/show">예약 현황 조회하기</a>에서 확인하실 수 있습니다.
 
 빈 시간대에 예약을 원하신다면, 우측 하단부의 `회의실 바로 예약`버튼을 눌러줍니다.
 
