--- a/tablet/setting/noshow.mdx
+++ b/tablet/setting/noshow.mdx
@@ -6,8 +6,8 @@ description: "회의 시작하는 방법을 노쇼 설정에 따라 알려드립
 ---
 
 <Note>
-    노쇼 기능을 사용하신다면, [노쇼 기능 활성화](https://mile.mintlify.app/tablet/setting/noshow#1)를 확인해주세요 <br />
-    노쇼 기능을 사용하지 않으시다면, [노쇼 기능 비활성화](https://mile.mintlify.app/tablet/setting/noshow#2)를 확인해주세요
+    노쇼 기능을 사용하신다면, <a href="https://mile.mintlify.app/tablet/setting/noshow#1">노쇼 기능 활성화</a>를 확인해주세요 <br />
+    노쇼 기능을 사용하지 않으시다면, <a href="https://mile.mintlify.app/tablet/setting/noshow#2">노쇼 기능 비활성화</a>를 확인해주세요
 </Note>
 
 ## 1. 노쇼 기능 활성화
