fix: 링크 연결 및 현재창에서 이동

--- a/tablet/setting/noshow.mdx
+++ b/tablet/setting/noshow.mdx
@@ -21,7 +21,7 @@ description: "회의 시작하는 방법을 노쇼 설정에 따라 알려드립
     <img src="/images/tablet/setting/noshow/img1.png" width="100%" />
 </Frame>
 <br />
-회의 시작을 누르시면 회의 진행 중 여러 기능을 사용해보실 수 있는 `on-air` 화면이 띄워집니다. <br /> `on-air`화면에 대해 더 알고싶으시다면, <a href="https://mile.mintlify.app/tablet/setting/noshow#3">on-air 화면 자세히 보기</a>을 확인해주세요.
+회의 시작을 누르시면 회의 진행 중 여러 기능을 사용해보실 수 있는 `on-air` 화면이 띄워집니다. <br /> `on-air`화면에 대해 더 알고싶으시다면, <a href="https://mile.mintlify.app/tablet/setting/noshow#3-on-air">on-air 화면 자세히 보기</a>을 확인해주세요.
 
 <Frame>
     <img src="/images/tablet/setting/noshow/img2.png" width="100%" />
