feat: 예약 현황 조회하기 자세히 작성

--- a/tablet/show.mdx
+++ b/tablet/show.mdx
@@ -1,11 +1,21 @@
 ---
-title: "예약 현황 조회하기"
+title: "회의실 예약 현황 조회하기"
 description: "태블릿 내에서 회의 예약 현황을 조회하고 예약해보세요."
 ---
 
 ---
 
-## 1. 현재 회의실 예약 조회하기
+## 1. 홈 화면 상세 기능 안내
+<Frame>
+  <img src="/images/tablet/show/img3.png" width="100%" height="500" />
+</Frame>
+
+1. 현재 회의실을 나타냅니다.
+2. 현재 일시를 확인할 수 있습니다.
+3. 현재 회의실에 예정되어있는 다음 회의 예약 정보를 보여줍니다.
+ 
+<br />
+## 2. 현재 회의실 예약 조회하기
 
 회의 시작 전 대기 화면에서 해당 회의실의 예약 현황을 조회해보실 수 있습니다.
 
@@ -16,12 +26,17 @@ description: "태블릿 내에서 회의 예약 현황을 조회하고 예약해
 </Frame>
 
 <br />
-## 2. 다른 회의실 예약 조회하기
+## 3. 다른 회의실 예약 조회하기
 
 우측 상단부에서 예약 현황을 조회하고 싶으신 회의실을 선택해주시면, 해당 회의실의 예약을 우측 화면에서 보실 수 있습니다.
-
+<Warning>
+  Hurble 회의실을 선택한 후, 바로 예약 버튼을 누르시면 Hurble 회의실 바로 예약 페이지로 이동됩니다. <br />
+  현재 회의실을 예약할 때에는 꼭 선택된 회의실이 현재 회의실이 맞는지 확인해주세요!
+</Warning>
 <Frame>
   <img src="/images/tablet/show/img2.png" width="100%" height="500" />
 </Frame>
 
 회의실 예약 내역을 조회해보시고, 비는 시간에 예약까지 마무리 해보세요! 바로 예약 기능에 대해서 더 자세히 보시려면, <a href="https://mile.mintlify.app/tablet/book/tablet">태블릿으로 예약하기</a>에서 확인해보실 수 있습니다.
+
+<br />
