--- a/tablet/show.mdx
+++ b/tablet/show.mdx
@@ -12,7 +12,7 @@ description: "태블릿 내에서 회의 예약 현황을 조회하고 예약해
 
 1. 현재 회의실을 나타냅니다.
 2. 현재 일시를 확인할 수 있습니다.
-3. 현재 회의실에 예정되어있는 다음 회의 예약 정보를 보여줍니다.
+3. 현재 회의실에 예정되어있는 다음 회의 정보를 나타냅니다.
  
 <br />
 ## 2. 현재 회의실 예약 조회하기
