--- a/essentials/tablet-login.mdx
+++ b/essentials/tablet-login.mdx
@@ -1,6 +1,6 @@
 ---
-title: "[태블릿] 로그인 및 회의실 선택하기"
-description: "태블릿을 로그인하고 회의실 셋팅하는 방법을 알려드립니다."
+title: "[태블릿] 로그인 및 회의실 설정하기"
+description: "태블릿 로그인 방법과 회의실 설정하는 방법을 알려드립니다."
 ---
 
 ---
