style: 텍스트 위치 수정

--- a/essentials/tablet-logout.mdx
+++ b/essentials/tablet-logout.mdx
@@ -6,6 +6,7 @@ description: "태블릿 로그아웃 방법과 회의실 변경 방법을 알려
 ---
 
 ## 1. 태블릿 로그아웃하기
+<Warning>로그아웃 시, 자동로그인이 해제됩니다.</Warning>
 
 홈 화면에서 좌측 상단에 회의실명과 일시가 표시된 헤더를 선택합니다.
 
@@ -22,8 +23,8 @@ description: "태블릿 로그아웃 방법과 회의실 변경 방법을 알려
 
 <br />
 
-<Info>로그아웃 or 회의실 변경 시 비밀번호 확인이 필요합니다.</Info>
 비밀번호 입력창이 뜨면, 태블릿 계정 비밀번호를 입력합니다.
+<Info>로그아웃 or 회의실 변경 시 비밀번호 확인이 필요합니다.</Info>
 <Frame>
   <img src="/images/essentials/tablet-logout/img3.png" width="100%" />
 </Frame>
@@ -34,7 +35,6 @@ description: "태블릿 로그아웃 방법과 회의실 변경 방법을 알려
 <Frame>
   <img src="/images/essentials/tablet-logout/img4.png" width="100%" />
 </Frame>
-<Info>로그아웃 시, 자동로그인이 해제됩니다.</Info>
 
 <br />
 
@@ -55,8 +55,8 @@ description: "태블릿 로그아웃 방법과 회의실 변경 방법을 알려
 
 <br />
 
-<Info>로그아웃 or 회의실 변경 시 비밀번호 확인이 필요합니다.</Info>
 비밀번호 입력창이 뜨면, 태블릿 계정 비밀번호를 입력합니다.
+<Info>로그아웃 or 회의실 변경 시 비밀번호 확인이 필요합니다.</Info>
 <Frame>
   <img src="/images/essentials/tablet-logout/img6.png" width="100%" />
 </Frame>
@@ -67,4 +67,4 @@ description: "태블릿 로그아웃 방법과 회의실 변경 방법을 알려
 <Frame>
   <img src="/images/essentials/tablet-logout/img7.png" width="100%" />
 </Frame>
- 다시 설정할 회의실을 선택하고, 마일 태블릿을 이용해보세요!
+ 원하는 회의실을 선택하고, 완료 버튼을 눌러 설정을 완료합니다.
