--- a/question.mdx
+++ b/question.mdx
@@ -15,15 +15,13 @@ description: "FAQ"
     <Accordion title="Q. 일부 회의실에만 테스트 도입이 가능할까요?">
         마일 서비스는 현재 구글 워크스페이스와 100% 연동되어 일부 회의실에만 적용해보셔도 원활한 공간 활용과 운용을 경험해보실 수 있습니다. 
 
-        하지만, 모든 공간에 마일 태블릿 서비스가 적용되었을 때 그 효과를 100% 경험하실 수 있으니, 모든 공간에 도입을 권장드립니다 🙂
+        하지만, 모든 공간에 마일 태블릿 서비스가 적용되었을 때 그 효과를 100% 경험하실 수 있으니, 일괄 도입을 권장드립니다 🙂
     </Accordion>
     <Accordion title="Q. 기기가 고장났어요. 어떻게 조치해야하나요?">
         support@mile.im 혹은 마일 서비스 내 외부의 채널톡을 통해 문의주세요! 24시간 내로 마일 팀이 직접 답변 및 조치를 취해드리겠습니다.
     </Accordion>
-    <Accordion title="Q. 신규입사자가 마일 서비스 내에 반영이 안되요. Or 지난달 퇴사자가 여전히 남아 있어요.">
-        마일 서비스는 구글 워크스페이스와의 연동을 전제로 하여, 신규입/퇴사자의 경우 구글 워크스페이스의 멤버 업데이트 내용을 마일 서비스와 동기화해주셔야 합니다. 
-
-        마일 웹페이지에서 설정 탭 → 서비스 연동 → 멤버 관리 → 멤버 동기화의 순서로 동기화를 진행해주세요. 구체적인 과정은 _(링크)_에서 확인하실 수 있습니다.
+    <Accordion title="Q. 신규 입사자가 마일 서비스 내에서 보이지 않습니다. or 지난달 퇴사자가 여전히 남아 있어요.">
+        마일 서비스는 구글 워크스페이스와의 연동을 기반으로 하여, 신규 입/퇴사자가 발생한 경우 <strong>마일 관리자 웹페이지 > 서비스 연동 > 구글 스페이스 연동 > 멤버 관리</strong>에서 동기화 작업을 진행해주셔야 합니다. 구체적인 과정은 <a href="https://mile.mintlify.app/notice">구글 캘린더 연동하기</a>에서 확인하실 수 있습니다.
     </Accordion>
     <Accordion title="Q. 태블릿 PC에서 연장 요청 시, 대상자에게 슬랙 메세지가 전송 되지 않아요.">
         마일 서비스는 슬랙과 구글 워크스페이스 이메일이 동일한 계정을 공유함을 전제로 합니다. 해당 현상은 구글 워크스페이스상의 유저 아이디 정보와 슬랙 계정이 동일하지 않아 발생하는 오류로, 해결을 위해 마일팀에게 문의 바랍니다 :)
