--- a/question.mdx
+++ b/question.mdx
@@ -3,7 +3,9 @@ title: "자주 묻는 질문"
 description: "FAQ"
 ---
 
-<Note>도입 문의가 필요하시다면 support@mile.im 혹은 [채팅 상담](https://mile.channel.io/home)을 통해 편히 문의해 주시길 바랍니다.</Note>
+---
+
+<Note>이외의 질문 사항은 support@mile.im 혹은 [채팅 상담](https://mile.channel.io/home)을 통해 편히 문의해 주시길 바랍니다.</Note>
 
 <AccordionGroup>
     <Accordion title="Q. 추가 기능 요청, 커스터마이징 등의 요구사항도 반영해주실 수 있나요?">
