fix: 마일 가이드 수정

--- a/introduction.mdx
+++ b/introduction.mdx
@@ -4,7 +4,11 @@ title: 마일 가이드
 
 ---
 
-<Note>마일 가이드에 오신 것을 환영합니다!</Note>
+<Note>
+  마일 가이드에 오신 것을 환영합니다!
+
+  가이드에서 충분한 답을 얻지 못했거나 문제가 발생하면 support@mile.im 혹은 [이 곳](https://mile.channel.io/home)을 통해 편히 문의해 주시길 바랍니다.
+</Note>
 
 -   <a href="https://mile.mintlify.app/product">제품 소개서</a>
 -   <a href="https://mile.mintlify.app/question">자주 묻는 질문</a>
@@ -12,6 +16,4 @@ title: 마일 가이드
 
 <br />
 
-그 외에 상담 및 문의사항이 있으시면 아래 링크를 통해 언제든 연락해주세요.
-
--   [마일팀에게 문의하기](https://mile.channel.io/home)
+<Note></Note>
