fix: 마일 가이드 수정

--- a/question.mdx
+++ b/question.mdx
@@ -20,7 +20,7 @@ description: "FAQ"
         하지만 마일 서비스 특성상 모든 회의실에 마일 태블릿이 배치되었을 때, 그 효과가 극대화되기 때문에 일괄 도입을 권장드립니다 🙂
     </Accordion>
     <Accordion title="Q. 기기가 고장났어요. 어떻게 조치해야 하나요?">
-        support@mile.im 혹은 마일 서비스 [이곳](https://mile.channel.io/home)을 통해 문의주세요! 24시간 내로 마일 팀이 직접 답변 및 조치를 취해드리겠습니다.
+        support@mile.im 혹은 [이곳](https://mile.channel.io/home)을 통해 문의주세요! 24시간 내로 마일 팀이 직접 답변 및 조치를 취해드리겠습니다.
     </Accordion>
     <Accordion title="Q. 신규 입사자가 마일 서비스 내에서 보이지 않습니다. or 지난달 퇴사자가 여전히 남아 있어요.">
         마일 서비스는 구글 워크스페이스와의 연동을 기반으로 제공되는 서비스입니다.
