fix: 마일 가이드 수정

--- a/question.mdx
+++ b/question.mdx
@@ -28,7 +28,9 @@ description: "FAQ"
         신규 입/퇴사자가 발생한 경우 <strong>마일 관리자 웹페이지 > 서비스 연동 > 구글 스페이스 연동 > 멤버 관리</strong>에서 동기화 작업을 진행해주셔야 합니다. 구체적인 과정은 <a href="https://mile.mintlify.app/essentials/google">구글 캘린더 연동하기</a>에서 확인하실 수 있습니다.
     </Accordion>
     <Accordion title="Q. 태블릿 PC에서 연장 요청 시, 대상자에게 슬랙 메세지가 전송되지 않아요.">
-        마일 서비스는 슬랙과 구글 워크스페이스 이메일이 동일한 계정임을 전제로 합니다. 해당 현상은 구글 워크스페이스의 유저 아이디 정보와 슬랙 계정이 동일하지 않아 발생하는 문제로, 자세한 내용은 마일 팀에게 문의 바랍니다 :)
+        마일 서비스는 슬랙과 구글 워크스페이스 이메일이 동일한 계정임을 전제로 합니다. 
+        
+        해당 현상은 구글 워크스페이스의 유저 아이디 정보와 슬랙 계정이 동일하지 않아 발생하는 문제로, 자세한 내용은 마일 팀에게 문의 바랍니다 :)
     </Accordion>
     <Accordion title="Q. 구글 워크스페이스 내에 리소스를 새로 추가했는데 마일 서비스에 반영이 안돼요. or 마일 서비스와 연동 과정에서 오류가 계속 발생해요.">
         구글 워크스페이스 내에 신규 추가된 리소스의 경우 구글 정책상 완전히 등록되기까지 최대 24시간까지 소요됩니다. 또한 Clockwise 등 구글 워크스페이스의 캘린더 API에 직접적으로 접근하여 일정을 변경하는 서비스들과 중첩 시, 연동 과정에서 오류가 발생할 수 있습니다. 
