fix: 예약 현황 조회 - 문구 수정

--- a/tablet/show.mdx
+++ b/tablet/show.mdx
@@ -17,10 +17,11 @@ description: "태블릿에서 회의실 예약 현황을 확인할 수 있습니
 <br />
 ## 1. 현재 회의실 예약 현황 조회하기
 
-회의 시작 전 대기 화면에서 해당 회의실의 예약 현황을 조회할 수 있습니다. 
+회의 시작 전 대기 화면에서 <strong>해당 회의실의 예약 현황을 조회</strong>할 수 있습니다. 
 <Frame>
   <img src="/images/tablet/show/img1.png" width="100%" height="500" />
 </Frame>
+<br />
 <Info>
   예약 현황을 확인하고 우측 하단부에 `회의실 바로 예약` 버튼을 통해 회의를 예약해보세요! 자세한 내용은 <a href="https://mile.mintlify.app/tablet/book/tablet">태블릿으로 예약하기</a>를 참고해주세요.
 </Info>
@@ -36,9 +37,9 @@ description: "태블릿에서 회의실 예약 현황을 확인할 수 있습니
 <Frame>
   <img src="/images/tablet/show/img2.png" width="100%" height="500" />
 </Frame>
-
+<br />
 <Info>
-  예약 현황을 확인하고 우측 하단부에 `회의실 바로 예약` 버튼을 통해 회의를 예약해보세요! 자세한 내용은 <a href="https://mile.mintlify.app/tablet/book/tablet">태블릿으로 예약하기</a>를 참고해주세요.
+  예약 현황을 확인하고 우측 하단부에 `회의실 바로 예약` 버튼을 통해 회의를 예약해보세요!<br />자세한 내용은 <a href="https://mile.mintlify.app/tablet/book/tablet">태블릿으로 예약하기</a>를 참고해주세요.
 </Info>
 
 <br />
