feat: 업데이트 템플릿 작성

--- a/notice/update/2023.10.26.mdx
+++ b/notice/update/2023.10.26.mdx
@@ -1,8 +1,9 @@
 ---
 title: "[23.10.26] 마일 태블릿 런칭"
 ---
-
+<Note>
 `New` 회의실 일정 관리 솔루션, 마일 태블릿이 런칭되었습니다.
+</Note>
 
 # 상세 업데이트 내용
 
@@ -20,6 +21,7 @@ title: "[23.10.26] 마일 태블릿 런칭"
 - 태블릿 계정 관리
 - 서비스 연동 (구글 캘린더 & 슬랙)
 
+<br />
 [Mile 관리자 웹페이지로 이동하기](https://app.mile.im/)
 <br />
 <Note>이외의 문의 사항은 support@mile.im 혹은 [이곳](https://mile.channel.io/home)을 통해 편히 문의해 주시길 바랍니다.</Note>
