feat: 2023.11.09 마일 1.2.0 업데이트

--- a/notice/update/2023.10.26.mdx
+++ b/notice/update/2023.10.26.mdx
@@ -1,25 +1,26 @@
 ---
-title: "[23.10.26] 마일 태블릿 런칭"
+title: "[23.10.26] 마일 1.0.0 업데이트"
 ---
-<Note>
-`New` 회의실 일정 관리 솔루션, 마일 태블릿이 런칭되었습니다.
-</Note>
+
+<Note>`New` 회의실 일정 관리 솔루션, 마일 태블릿이 런칭되었습니다.</Note>
 
 # 상세 업데이트 내용
 
 ### Mile 태블릿
-- 구글 캘린더 회의실 및 예약 일정 조회
-- 구글 캘린더 회의실 바로 예약
-- 회의실 이용 시간 안내
-- 회의실 이용 연장
-- 회의실 이용 연장 요청
-- 후속 회의 바로 예약
-- 다른 회의실 이어서 예약
+
+-   구글 캘린더 회의실 및 예약 일정 조회
+-   구글 캘린더 회의실 바로 예약
+-   회의실 이용 시간 안내
+-   회의실 이용 연장
+-   회의실 이용 연장 요청
+-   후속 회의 바로 예약
+-   다른 회의실 이어서 예약
 
 ### Mile 관리자 웹(PC)
-- 기업 정보 관리
-- 태블릿 계정 관리
-- 서비스 연동 (구글 캘린더 & 슬랙)
+
+-   기업 정보 관리
+-   태블릿 계정 관리
+-   서비스 연동 (구글 캘린더 & 슬랙)
 
 <br />
 [Mile 관리자 웹페이지로 이동하기](https://app.mile.im/)
