--- a/notice/update.mdx
+++ b/notice/update.mdx
@@ -3,15 +3,15 @@ title: "업데이트 목록"
 description: "마일의 새로운 기능과 업데이트 정보를 확인하세요."
 ---
 
-<Card title="[23.10.26] 마일 태블릿 런칭" href="https://mile.mintlify.app/notice/update/2023.10.26">
+<Card title="[23.10.26] 마일 ver1.0.0 업데이트" href="https://mile.mintlify.app/notice/update/2023.10.26">
     `New` 회의실 일정 관리 솔루션, 마일 태블릿이 런칭되었습니다!
 </Card>
 
-<Card title="[23.10.27] 회의실 사용 통계 대시보드" href="https://mile.mintlify.app/notice/update/2023.10.26">
+<Card title="[23.10.27] 마일 ver1.0.1 업데이트" href="https://mile.mintlify.app/notice/update/2023.10.26">
     `Feature` 마일 관리자 웹페이지에 회의실 사용 통계를 확인할 수 있는 대시보드 기능이 추가되었습니다.
 </Card>
 
-<Card title="[23.11.09] 신규 대시보드 업데이트" href="https://mile.mintlify.app/notice/update/2023.10.26">
+<Card title="[23.11.09] 마일 ver1.2.0 업데이트" href="https://mile.mintlify.app/notice/update/2023.10.26">
     `Feature` 회의실 사용 통계 대시보드에 필터 기능이 추가되었으며, 관계망 대시보드가 새롭게 추가되었습니다.
 </Card>
 
