feat: 2023.10.27 마일 1.1.0 업데이트

--- a/notice/update/2023.10.27.mdx
+++ b/notice/update/2023.10.27.mdx
@@ -1,3 +1,25 @@
 ---
-title: "[23.10.27] 마일 1.0.1 업데이트"
+title: "[23.10.27] 마일 1.1.0 업데이트"
 ---
+
+<Note>
+
+`Feature` 마일 관리자 웹페이지에 회의실 사용 통계를 확인할 수 있는 대시보드 기능이 추가되었습니다.
+
+</Note>
+
+### Mile Web
+
+---
+
+-   구글 로그인 버튼을 구글 가이드라인에 맞춰 수정하였습니다.
+-   ver 1.0.0에 대한 오류 사항 및 QA를 진행하여 수정하였습니다.
+
+<br />
+### Mile Analytics
+
+---
+
+-   예약 현황 데이터 리포트 기능을 추가하였습니다.
+-   임직원 관계망 데이터 테이블로 보기 기능을 추가하였습니다.
+-   임직원 관계망 데이터 그래브로 보기 기능을 추가하였습니다.
