--- a/analytics/mile-meeting/meeting-dashboard.mdx
+++ b/analytics/mile-meeting/meeting-dashboard.mdx
@@ -82,4 +82,4 @@ description: "회의실 현황 대시보드를 통해서 회의실 공간에 대
 
 보다 양질의 인사이트를 제공해드리고자, 항상 고객 피드백을 바탕으로 대시보드를 만들어나가고 있습니다. 더 필요한 인사이트가 있으시면, 아래 문의에 남겨주세요!
 
-[Mile 팀](https://mile.channel.io/home)
+<a href="https://mile.channel.io/home">Mile 팀</a>
