--- a/introduction.mdx
+++ b/introduction.mdx
@@ -10,7 +10,9 @@ description: 마일 가이드에 오신 것을 환영합니다!
 -   <a href="https://mile.mintlify.app/notice">공지사항 / 업데이트</a>
 
 <Note>
-  가이드에서 충분한 답을 얻지 못했거나, 문제가 발생한 경우<br />support@mile.im 혹은 [이곳](https://mile.channel.io/home)을 통해 편히 문의해 주시길 바랍니다.
+    가이드에서 충분한 답을 얻지 못했거나, 문제가 발생한 경우
+    <br />
+    support@mile.im 혹은 <a href="https://mile.channel.io/home">이곳</a>을 통해 편히 문의해 주시길 바랍니다.
 </Note>
 
 <br />
