--- a/notice/update/2023.10.26.mdx
+++ b/notice/update/2023.10.26.mdx
@@ -23,6 +23,8 @@ title: "[23.10.26] 마일 1.0.0 업데이트"
 -   서비스 연동 (구글 캘린더 & 슬랙)
 
 <br />
-[Mile 관리자 웹페이지로 이동하기](https://app.mile.im/)
+<a href="https://app.mile.im">Mile 관리자 웹페이지로 이동하기</a>
 <br />
-<Note>이외의 문의 사항은 support@mile.im 혹은 [이곳](https://mile.channel.io/home)을 통해 편히 문의해 주시길 바랍니다.</Note>
+<Note>
+    이외의 문의 사항은 support@mile.im 혹은 <a href="https://mile.channel.io/home">이곳</a>을 통해 편히 문의해 주시길 바랍니다.
+</Note>
