--- a/analytics/mile-meeting/book-report.mdx
+++ b/analytics/mile-meeting/book-report.mdx
@@ -10,7 +10,7 @@ description: "임직원 회의실 예약 현황을 종합적으로 확인할 수
 로그인 후 메인 페이지에서 좌측 사이드 바의 두 번째 탭, `애널리틱스` 아이콘을 클릭하여 해당 페이지로 이동합니다.
 `애널리틱스` 탭은 회의실 예약 데이터를 기반으로 예약 현황 데이터 리포트와 임직원 관계망 데이터를 제공합니다.
 
--   [임직원 관계망 데이터 보러가기](https://mile.mintlify.app/analytics/network/table)
+-   <a href="https://mile.mintlify.app/analytics/mile-meeting/table">임직원 관계망 데이터 보러가기</a>
 
 <br />
 
