--- a/analytics/mile-visitors/visitor-report.mdx
+++ b/analytics/mile-visitors/visitor-report.mdx
@@ -10,8 +10,8 @@ description: "방문자 현황을 확인하는 방법을 알려드립니다. "
 로그인 후 메인 페이지에서 좌측 사이드 바의 두 번째 탭, `애널리틱스` 아이콘을 클릭하여 해당 페이지로 이동합니다.
 `애널리틱스` 탭은 회의실 예약 데이터를 기반으로 예약 현황 데이터 리포트와 임직원 관계망 데이터 방문객 데이터 를 제공합니다.
 
--   [임직원 관계망 데이터 보러가기](https://mile.mintlify.app/analytics/network/table)
--   [회의실 예약 데이터 보러가기](https://mile.mintlify.app/analytics/book-report)
+-   <a href="https://mile.mintlify.app/analytics/mile-meeting/table">임직원 관계망 데이터 보러가기</a>
+-   <a href="https://mile.mintlify.app/analytics/mile-meeting/book-report">회의실 예약 데이터 보러가기</a>
 
 `애널리틱스` 에서 `방문자 관리 데이터` 탭을 클릭하면, 방문자 관리 데이터를 조회해 볼 수 있는 페이지에 접속할 수 있습니다.
 
