feat: 회의실 현황 대시보드 수정

--- a/analytics/mile-meeting/meeting-dashboard.mdx
+++ b/analytics/mile-meeting/meeting-dashboard.mdx
@@ -50,7 +50,7 @@ description: "회의실 현황 대시보드를 통해서 회의실 공간에 대
 </Frame>
 
 <br />
-현재는 아래와 같이 6가지 대시보드가 제공됩니다.
+현재는 아래와 같이 8가지 대시보드가 제공됩니다.
 
 **총 회의실 예약 수**
 
@@ -75,6 +75,14 @@ description: "회의실 현황 대시보드를 통해서 회의실 공간에 대
 **일별 회의 현황**
 
 -   한 달 동안 모든 회의실에서 예약된 회의 수를 일 별로 표시합니다.
+
+**종료로 절약된 시간**
+
+-   회의 종료 기능을 사용해 절약된 회의실 사용 시간을 표시합니다.
+
+**노쇼로 절약된 시간**
+
+-   노쇼 정책으로 인해 절약된 회의실 사용 시간을 표시합니다.
 
 <br />
 
