feat: 사전 방문자 등록하기 (임직원용)

--- a/visitors/visitor-register/register-with-employee.mdx
+++ b/visitors/visitor-register/register-with-employee.mdx
@@ -77,6 +77,38 @@ description: "방문자가 계신가요? 사전 방문자 등록하는 방법을
 
 <br />
 
+## 4. [개인 캘린더 연동시] 개인 구글 캘린더에 일정 등록하기
+
+해당 기능은 **개인 캘린더 연동**이 된 상태에서 사용이 가능합니다.
+
+개인 캘린더 연동 관련하여 자세히 보시려면, [개인 캘린더 연동하기]() 링크를 클릭해주세요.
+
+### 4.1 캘린더 일정 정보 입력 페이지 접속하기
+
+1. 방문자 등록하기 순서를 진행하시고 난 뒤, 개인캘린더가 연동되어있으면, 해당 페이지로 이동됩니다.
+
+<Frame>
+    <img src="/images/visitors/visitor-register/register-with-employee/img8.png" width="100%" />
+</Frame>
+
+<br />
+
+### 4.2 일정 입력 및 등록하기
+
+-   **제목**: 해당 제목은 구글 캘린더에 등록될 제목입니다.
+-   **방문 일자**: 방문일자는 방문 등록시 설정한 일자이며, 수정이 불가능합니다.
+-   **방문 시간**: 구글 캘린더에 표시될 시간이며, 방문 종료 시간을 기입해주세요.
+-   **참석자**: 일정을 함께 보낼 참석자들을 추가해주세요. 기입된 참여자들에게 구글 인비가 전송됩니다.
+-   **메모**: 구글 일정에 메모 섹션에 표시될 정보입니다.
+
+해당 입력을 완료 후에 하단에 `등록` 버튼을 클릭하여 일정을 등록해주세요.
+
+<Frame>
+    <img src="/images/visitors/visitor-register/register-with-employee/img9.png" width="100%" />
+</Frame>
+
+<br />
+
 ## 4. 카카오톡으로 방문 일정 안내 받기
 
 방문 등록시 안내 채널을 카카오톡으로 설정하면, 방문객은 **등록 시점 직후와 방문 당일 오전 08:00에 카카오톡 알림과 리마인더**를 제공받을 수 있습니다.
