feat: 사전 방문자 등록하기 (임직원용)

--- a/visitors/visitor-register/register-with-employee.mdx
+++ b/visitors/visitor-register/register-with-employee.mdx
@@ -40,7 +40,7 @@ description: "방문자가 계신가요? 사전 방문자 등록하는 방법을
 
 이 페이지에서는 직접 **방문자 추가하기** 버튼을 눌러서 작성하는 방식만 안내드리겠습니다.
 
-만약 **방문자 등록 CSV 업로드**에 대해서 더 자세한 내용을 확인하시려면 <a>CSV로 방문자 등록하기 (임직원용)</a>를 확인해주세요.
+만약 **방문자 등록 CSV 업로드**에 대해서 더 자세한 내용을 확인하시려면 <a href="https://mile.mintlify.app/visitors/visitor-register/register-visitors-with-csv">Excel로 방문자 등록하기 (임직원용)</a>를 확인해주세요.
 
 방문 등록은 **기본 정보** 와 **방문자 정보** 를 기입해야 방문 등록이 가능합니다.
 
@@ -81,7 +81,7 @@ description: "방문자가 계신가요? 사전 방문자 등록하는 방법을
 
 해당 기능은 **개인 캘린더 연동**이 된 상태에서 사용이 가능합니다.
 
-개인 캘린더 연동 관련하여 자세히 보시려면, [개인 캘린더 연동하기]() 링크를 클릭해주세요.
+개인 캘린더 연동 관련하여 자세히 보시려면, <a href="https://mile.mintlify.app/essentials/link-private-calendar">개인 캘린더 연동하기<a/> 링크를 클릭해주세요.
 
 ### 4.1 캘린더 일정 정보 입력 페이지 접속하기
 
