feat: 사전 방문자 등록하기 (임직원용)

--- a/visitors/visitor-register/register-with-employee.mdx
+++ b/visitors/visitor-register/register-with-employee.mdx
@@ -61,7 +61,36 @@ description: "방문자가 계신가요? 사전 방문자 등록하는 방법을
 </Frame>
 
 <br />
-### 3.2 방문자 정보 입력하기
+
+### 3.2 개별 방문 활성화 옵션
+
+개별 방문 활성화 옵션에 따라, 방문자에게 개별 입장이 가능한 QR코드 제공 방식이 달라집니다.
+
+<Frame>
+    <img src="/images/visitors/visitor-register/register-with-employee/img4.png" width="100%" />
+</Frame>
+
+<br />
+
+**개별 방문 활성화 OFF**
+
+한 명의 방문자가 태블릿으로 사전 예약 방문으로 담당자를 호출 할때, 다른 방문자의 리스트도 확인 할 수 있는 옵션입니다. ex) 소규모 방문에서 사용
+
+[예시 이미지]
+
+<img src="/images/visitors/visitor-register/register-with-employee/img5.png" width="50%" />
+<br />
+
+**개별 방문 활성화 ON**
+
+한 명의 방문자가 태블릿으로 사전 예약 방문으로 담당자를 호출 할때, 다른 방문자의 리스트를 확인 할 수 없습니다. ex) 면접, 세미나 등의 방문에서 사용
+
+[예시 이미지]
+
+<img src="/images/visitors/visitor-register/register-with-employee/img6.png" width="50%" />
+<br />
+
+### 3.3 방문자 정보 입력하기
 
 방문자 정보로는 **이름/ 안내 채널/ 전화번호 및 이메일** 이 있습니다.
 
@@ -72,7 +101,7 @@ description: "방문자가 계신가요? 사전 방문자 등록하는 방법을
 현재 방문 일정 안내 알림을 **카카오톡**과 **Email**의 형식으로 제공하고 있습니다. 채널을 선택해주시면 해당 채널로 알림을 받아보실 수 있습니다.
 
 <Frame>
-    <img src="/images/visitors/visitor-register/register-with-employee/img4.png" width="100%" />
+    <img src="/images/visitors/visitor-register/register-with-employee/img7.png" width="100%" />
 </Frame>
 
 <br />
@@ -81,7 +110,7 @@ description: "방문자가 계신가요? 사전 방문자 등록하는 방법을
 
 해당 기능은 **개인 캘린더 연동**이 된 상태에서 사용이 가능합니다.
 
-개인 캘린더 연동 관련하여 자세히 보시려면, <a href="https://mile.mintlify.app/essentials/link-private-calendar">개인 캘린더 연동하기<a/> 링크를 클릭해주세요.
+개인 캘린더 연동 관련하여 자세히 보시려면, <a href="https://mile.mintlify.app/essentials/link-private-calendar">개인 캘린더 연동하기</a> 링크를 클릭해주세요.
 
 ### 4.1 캘린더 일정 정보 입력 페이지 접속하기
 
@@ -115,20 +144,19 @@ description: "방문자가 계신가요? 사전 방문자 등록하는 방법을
 
 또한, `방문 일정 확인하기` 버튼을 클릭하여 방문시 필요한 안내 사항과 출입에 필요한 바코드 및 입력 코드를 받아볼 수 있습니다.
 
-<img src="/images/visitors/visitor-register/register-with-employee/img5.png" width="50%" />
-
+<img src="/images/visitors/visitor-register/register-with-employee/img10.png" width="50%" />
 <br />
 ## 6. 이메일로 방문 일정 안내 받기
 
 방문 등록시 안내 채널을 Email로 설정하면, 방문객은 이메일로 방문 일정에 대한 알림을 받아볼 수 있습니다.
 
 <Frame>
-    <img src="/images/visitors/visitor-register/register-with-employee/img6.png" width="100%" />
+    <img src="/images/visitors/visitor-register/register-with-employee/img11.png" width="100%" />
 </Frame>
 
 <br />
 카카오톡과 마찬가지로, 방문 일정 확인하기를 누르시면 아래와 같이 기업내에서 미리 설정해둔 방문 안내 사이트로 접속할 수 있습니다.
 
 <Frame>
-    <img src="/images/visitors/visitor-register/register-with-employee/img7.png" width="100%" />
+    <img src="/images/visitors/visitor-register/register-with-employee/img12.png" width="100%" />
 </Frame>
