--- a/notice/update/2024.03.17.mdx
+++ b/notice/update/2024.03.17.mdx
@@ -13,23 +13,31 @@ title: "[24.03.17] 마일 1.2.7 업데이트"
 
 ---
 
-    **웹**
-    - 캘린더 일정 정보 등록 기능이 추가되었습니다.
-    - 사전 방문자 등록 및 수정시 개인 캘린더 연동 기능이 추가되었습니다.
-    - 방문 요청 승인시 모달로 개인 캘린더 연동 기능을 추가하였습니다.
-    - 사전 방문자 등록 (임직원용) 방문 목적 select 가능하도록 기능을 추가하였습니다.
-    - 방문 정보 등록 요청 링크로 이름을 수정하였습니다.
+    **태블릿**
+    - 사전 방문 조회 프로세스 중, 인원을 선택해서 담당자를 호출 할 수 있도록 프로세스를 변경하였습니다.
+    - 장기 미응답시 (1분 이상) 터치 액션 유도 안내 알림창이 추가되었습니다.
 
 <br />
 
-### Admin Web
+### Mile Web
 
 ---
 
     **공통**
-    - 내 정보 관리 페이지에 개인 캘린더 연동 기능이 추가되었습니다.
-    - 멤버 목록 동기화 버튼이 서비스 연동 페이지에서 멤버 권한 관리 페이지로 변경되었습니다.
-    - 프로필 UI가 수정되었습니다.
+    - 개인 캘린더 연동 및 해제 기능이 추가되었습니다.
+    - 사전 방문자 등록시, 개별 방문 활성화 기능이 추가되었습니다.
 
-    **Mile Visitors**
-    - 사전 방문 목적 설정 기능이 추가되었습니다.
+
+    **Admin**
+    - 관리자 권한 서비스 연동 관리 페이지 제한을 관리자까지 확인할 수 있도록 수정하였습니다.
+    - 슬랙 연동 기능을 관리자도 할 수 있도록 제한을 해제하였습니다.
+    - 멤버 권한 관리에서 멤버 역할 select box가 안열리는 이슈를 해결하였습니다.
+    - 기기 계정 관리 페이지를 삭제하고, 기업 정보 관리 페이지에 추가하였습니다.
+    - 슬랙 추가하기 기능을 링크로 조회하여 추가하는 방식으로 변경되었습니다.
+    - 기기 로그인 계정의 ID 수정하기 기능이 추가되었습니다.
+
+
+    **Mile Analytics**
+    - 임직원 관계망 데이터 / 그래프를 한 페이지에 병합하였습니다.
+    - 방문자 관리 데이터의 필터, 항목이 추가되었습니다.
+    - 회의실 관리 데이터 필터, 항목이 추가되었습니다.
