feat: 기기별 당일 방문 설정하기

--- a/essentials/visitors/edit-device-name.mdx
+++ b/essentials/visitors/edit-device-name.mdx
@@ -76,6 +76,6 @@ description: "Mile Visitors 제품에 사용되는 기기명을 수정하고 기
 
 각 기능별 상세 설정 방법은 아래 링크에서 확인할 수 있습니다!
 
--   기기별 홈 화면 구성하기
--   기기별 초인종 설정하기
--   기기별 당일 방문 설정하기
+-   <a href="https://mile.mintlify.app/essentials/visitors/thema-customizing">기기별 홈 화면 구성하기</a>
+-   <a href="https://mile.mintlify.app/essentials/visitors/doorbell-setting">기기별 초인종 설정하기</a>
+-   <a href="https://mile.mintlify.app/essentials/visitors/visit-purpose-setting">기기별 당일 방문 설정하기</a>
