--- a/essentials/visitors/thema-customizing.mdx
+++ b/essentials/visitors/thema-customizing.mdx
@@ -89,6 +89,6 @@ description: "Mile Visitors 기기별 화면 구성하는 방법을 안내드립
 
 기기별 커스터마이징 방법은 아래 링크에서 추가로 확인할 수 있습니다!
 
--   기기별 명칭 & 사용 기능 설정하기
--   기기별 초인종 설정하기
--   기기별 당일 방문 설정하기
+-   <a href="https://mile.mintlify.app/essentials/visitors/edit-device-name">기기별 명칭 & 사용 기능 설정하기</a>
+-   <a href="https://mile.mintlify.app/essentials/visitors/doorbell-setting">기기별 초인종 설정하기</a>
+-   <a href="https://mile.mintlify.app/essentials/visitors/visit-purpose-setting">기기별 당일 방문 설정하기</a>
