feat: 사전 방문자 등록하기 (임직원용_ )

--- a/visitors/visitor-register/register-with-employee.mdx
+++ b/visitors/visitor-register/register-with-employee.mdx
@@ -62,12 +62,23 @@ description: "방문자가 계신가요? 사전 방문자 등록하는 방법을
 
 <br />
 
-### 3.2 개별 방문 활성화 옵션
+### 3.2 방문 담당자 설정
+
+방문자가 도착했을 때, 알림을 받아볼 수 있는 담당자를 추가하고 싶으신가요?
+
+방문을 만든 담당자 이외에도 알림을 받아볼 수 있도록 **방문 담당자** 섹션에서 담당자를 검색한 후, 추가해주세요.
+
+<Frame>
+    <img src="/images/visitors/visitor-register/register-with-employee/img4.png" width="100%" />
+</Frame>
+<br />
+
+### 3.3 개별 방문 활성화 옵션
 
 개별 방문 활성화 옵션에 따라, 방문자에게 개별 입장이 가능한 QR코드 제공 방식이 달라집니다.
 
 <Frame>
-    <img src="/images/visitors/visitor-register/register-with-employee/img4.png" width="100%" />
+    <img src="/images/visitors/visitor-register/register-with-employee/img5.png" width="100%" />
 </Frame>
 
 <br />
@@ -78,7 +89,7 @@ description: "방문자가 계신가요? 사전 방문자 등록하는 방법을
 
 [예시 이미지]
 
-<img src="/images/visitors/visitor-register/register-with-employee/img5.png" width="50%" />
+<img src="/images/visitors/visitor-register/register-with-employee/img6.png" width="50%" />
 <br />
 
 **개별 방문 활성화 ON**
@@ -87,10 +98,10 @@ description: "방문자가 계신가요? 사전 방문자 등록하는 방법을
 
 [예시 이미지]
 
-<img src="/images/visitors/visitor-register/register-with-employee/img6.png" width="50%" />
+<img src="/images/visitors/visitor-register/register-with-employee/img7.png" width="50%" />
 <br />
 
-### 3.3 방문자 정보 입력하기
+### 3.4 방문자 정보 입력하기
 
 방문자 정보로는 **이름/ 안내 채널/ 전화번호 및 이메일** 이 있습니다.
 
@@ -101,7 +112,7 @@ description: "방문자가 계신가요? 사전 방문자 등록하는 방법을
 현재 방문 일정 안내 알림을 **카카오톡**과 **Email**의 형식으로 제공하고 있습니다. 채널을 선택해주시면 해당 채널로 알림을 받아보실 수 있습니다.
 
 <Frame>
-    <img src="/images/visitors/visitor-register/register-with-employee/img7.png" width="100%" />
+    <img src="/images/visitors/visitor-register/register-with-employee/img8.png" width="100%" />
 </Frame>
 
 <br />
@@ -133,7 +144,7 @@ description: "방문자가 계신가요? 사전 방문자 등록하는 방법을
 해당 입력을 완료 후에 하단에 `등록` 버튼을 클릭하여 일정을 등록해주세요.
 
 <Frame>
-    <img src="/images/visitors/visitor-register/register-with-employee/img9.png" width="100%" />
+    <img src="/images/visitors/visitor-register/register-with-employee/img10.png" width="100%" />
 </Frame>
 
 <br />
@@ -144,19 +155,19 @@ description: "방문자가 계신가요? 사전 방문자 등록하는 방법을
 
 또한, `방문 일정 확인하기` 버튼을 클릭하여 방문시 필요한 안내 사항과 출입에 필요한 바코드 및 입력 코드를 받아볼 수 있습니다.
 
-<img src="/images/visitors/visitor-register/register-with-employee/img10.png" width="50%" />
+<img src="/images/visitors/visitor-register/register-with-employee/img11.png" width="50%" />
 <br />
 ## 6. 이메일로 방문 일정 안내 받기
 
 방문 등록시 안내 채널을 Email로 설정하면, 방문객은 이메일로 방문 일정에 대한 알림을 받아볼 수 있습니다.
 
 <Frame>
-    <img src="/images/visitors/visitor-register/register-with-employee/img11.png" width="100%" />
+    <img src="/images/visitors/visitor-register/register-with-employee/img12.png" width="100%" />
 </Frame>
 
 <br />
 카카오톡과 마찬가지로, 방문 일정 확인하기를 누르시면 아래와 같이 기업내에서 미리 설정해둔 방문 안내 사이트로 접속할 수 있습니다.
 
 <Frame>
-    <img src="/images/visitors/visitor-register/register-with-employee/img12.png" width="100%" />
+    <img src="/images/visitors/visitor-register/register-with-employee/img13.png" width="100%" />
 </Frame>
