--- a/notice/update.mdx
+++ b/notice/update.mdx
@@ -3,6 +3,11 @@ title: "업데이트 목록"
 description: "마일의 새로운 기능과 업데이트 정보를 확인하세요."
 ---
 
+<Card title="[23.03.31] 마일 1.2.8 업데이트" href="https://mile.mintlify.app/notice/update/2024.03.31">
+    `Fix` Mile Visitors 커스터마이징 기능이 기기별 설정 기능으로 변경되었습니다. <br />
+    `Feat` Mile Visitors 사전 방문자 등록(임직원용)시, slack 알림 받을 수 있는 담당자 추가 기능이 추가되었습니다. <br />
+</Card>
+
 <Card title="[23.03.17] 마일 1.2.7 업데이트" href="https://mile.mintlify.app/notice/update/2024.03.17">
     `Feature` Mile Visitors 사전 방문자 등록시, 개별 방문 활성화 기능이 추가되었습니다. <br />
     `Fix` Mile Visitors 예약 방문 과정의 프로세스가 변경되었습니다. (인원 선택 방식) <br />
