feat: 회의 종료하기

--- a/tablet/start.mdx
+++ b/tablet/start.mdx
@@ -7,7 +7,7 @@ description: "설정된 체크인 정책에 따라 Mile Meeting 에서 회의를
 
 ## 1. 노쇼 취소 기능 사용시
 
-### 2.1 기본 노쇼 취소 기능
+### 1.1 기본 노쇼 취소 기능
 
 노쇼 기능을 사용하는 경우, 회의 시작 시간이 되면 대기 화면으로 이동합니다.
 
@@ -26,13 +26,13 @@ description: "설정된 체크인 정책에 따라 Mile Meeting 에서 회의를
 회의 시작을 누르시면 회의 진행 화면인 `on-air 화면`으로 이동됩니다.
 
 <Info>
-⚡ **`on-air 화면`**에 대해 더 알고싶으시다면, <a href="https://mile.mintlify.app/tablet/setting/noshow#3-on-air">on-air 화면 자세히 보기</a>을 확인해주세요.
+⚡ `on-air 화면`에 대해 더 알고싶으시다면, <a href="https://mile.mintlify.app/tablet/setting/noshow#3-on-air">on-air 화면 자세히 보기</a>을 확인해주세요.
 
 </Info>
 
 <br />
 
-### 2.2 자동 체크인 보조 기능
+### 1.2 자동 체크인 보조 기능
 
 관리자가 노쇼 기능 중 **자동 체크인 기능**을 활성화한 상태에서 제공되는 기능입니다.
 
