회의실 현황 대시보드

--- a/analytics/mile-meeting/meeting-dashboard.mdx
+++ b/analytics/mile-meeting/meeting-dashboard.mdx
@@ -21,7 +21,6 @@ description: "회의실 현황 대시보드를 통해서 회의실 공간에 대
 
 이번 페이지에서는 Mile Meeting으로 수집된 데이터 대시보드인 회의실 현황 대시보드를 확인하는 방법을 알려드립니다.
 
-<br />
 ## 1. 회의실 현황 대시보드 페이지 접속하기
 
 로그인 후 메인 페이지 좌측 사이드 바의 `Mile Analytics` 탭을 클릭하고, 목록 탭에서 `Mile Meeting` 를 선택한 후 서브 목록인 `회의실 현황 대시보드` 목록을 선택하여 해당 페이지에 접속합니다.
@@ -33,9 +32,7 @@ description: "회의실 현황 대시보드를 통해서 회의실 공간에 대
 <br />
 ## 2. 대시보드 조회하기
 
-### 2.1 월별로 조회하기
-
-아래 사진과 같이, 조회 기간 필터를 클릭하고, 조회하고 싶은 월을 클릭하여 바로 조회해보실 수 있습니다.
+아래 사진과 같이, 조회 기간과 회의실 필터를 설정하여 조건에 맞는 데이터를 바로 조회해보실 수 있습니다.
 
 <Frame>
     <img src="/images/analytics/mile-meeting/meeting-dashboard/img2.png" width="100%" height="300" />
@@ -50,13 +47,17 @@ description: "회의실 현황 대시보드를 통해서 회의실 공간에 대
 </Frame>
 
 <br />
-현재는 아래와 같이 8가지 대시보드가 제공됩니다.
+현재는 아래와 같이 7가지 대시보드가 제공됩니다.
 
-**총 회의실 예약 수**
+**회의실 예약 수**
 
--   한 달 동안 모든 회의실에서 예약된 회의의 총 개수를 보여줍니다.
+-   한 달 동안 회의실에서 예약된 회의의 총 개수를 보여줍니다.
 
-**가장 많이 사용된 회의실**
+**회의실 사용 시간**
+
+-   한 달 동안 회의실이 사용된 시간을 보여줍니다.
+
+    **가장 많이 사용된 회의실**
 
 -   한 달 동안 사용된 회의실 중에서 가장 많은 시간 동안 사용된 회의실의 정보를 시간과 함께 표시합니다.
 
@@ -68,14 +69,6 @@ description: "회의실 현황 대시보드를 통해서 회의실 공간에 대
 
 -   노쇼를 활성화 한 기업의 경우, 실제 한달 동안 Mile Meeting을 통해 노쇼 처리가 된 회의의 비율을 보여줍니다.
 
-**회의실 이용 현황**
-
--   한 달 동안 모든 회의실에서 사용된 누적 시간을 일 별로 표시합니다.
-
-**일별 회의 현황**
-
--   한 달 동안 모든 회의실에서 예약된 회의 수를 일 별로 표시합니다.
-
 **종료로 절약된 시간**
 
 -   회의 종료 기능을 사용해 절약된 회의실 사용 시간을 표시합니다.
@@ -84,7 +77,13 @@ description: "회의실 현황 대시보드를 통해서 회의실 공간에 대
 
 -   노쇼 정책으로 인해 절약된 회의실 사용 시간을 표시합니다.
 
-<br />
+**회의실 이용 현황**
+
+-   한 달 동안 회의실에서 사용된 누적 시간을 일 별로 표시합니다.
+
+**일별 회의 현황**
+
+-   한 달 동안 회의실에서 예약된 회의 수를 일 별로 표시합니다.
 
 ## 3. 추가 대시보드 확인하기
 
